--- a/source/_posts/建站记.md
+++ b/source/_posts/建站记.md
@@ -12,6 +12,7 @@ tags: 公告
 
 - [nalemy](https://nalemy.github.io/) 和 [llingy](https://llingy.top) 提供的经验支持
 - [NightmareAlita](https://nightmarealita.top) 在我搭博客的时候一直在旁边【数据删除】。
+- [nalemy](https://nalemy.github.io/) 用一中午的时间帮我配置 Github。
 
 **最后**：
 
