--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -1,5 +1,5 @@
 ---
-title: 第一册-第一章：Welcome to Horgwarts
+title: 第一册-序章
 date: 2023-09-07 17:07:19
 tags: 小故事
 description: 平常的一天，不平常的故事与全新的开始。
@@ -20,7 +20,21 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “千束，快来吃早饭啦！”护工在门口呼唤着千束。“来啦！”应答一声，千束恋恋不舍地跑向食堂。孤儿院的早饭绝对不算什么丰厚的大餐。“但在孤儿院里绝对算是一流的啦！”一个名叫依晨的孩子曾这样给千束说过。依晨是这群孩子中年龄最大的。一个月前，因为原来的孤儿院解散，被送到了这里。“我原来待的那个地方吃的还不如这儿呢。那里还有一个特别凶的女孩子，惹恼了她你可就小心吧。但是她其实挺热心的，如果你真的有什么找她帮忙，她也是会帮的。”每次依晨讲起他在之前孤儿院的故事，其他孩子们都会让他多讲一些，毕竟对于这些从记事起就在孤儿院长大的孩子来说，这些故事可是闻所未闻的。于是依晨又讲起了那个女孩子，“有一次，我们一个同学调皮地乱转，不小心失足掉进了孤儿院的荷花池里，很快，他便被无情的湖水吞没了。我便迅速去叫老师，但就在我和老师回来的时候，那个掉进荷花池中的孩子却已经被救出来了。据旁边的孩子所说，那个女孩子径直跳了进去，就在其他孩子担心的时候，她抱着那个落水的孩子浮出了水面。唉，不知道她现在在哪里呢。”
 
-看着开心吃饭的孩子们，院长博正欣慰地露出了笑容。十年前，一场突如其来的地震摧毁了博正的一切，就在他万念俱灰的时候，他遇到了这个项目。当时，孤儿院内只有两个孩子，但是博正仍然无私地奉献出了自己的全部积蓄。现在，随着越来越多的人无私地奉献，这个项目也越做越大。 “我曾经被灾害夺走了一切，但现在，这些孩子们就是我的全部。”在接受媒体采访的时候，博正如是说道。
+看着开心吃饭的孩子们，院长博正欣慰地露出了笑容。十年前，一场突如其来的地震摧毁了博正的一切，全家唯有他自己得以幸存。就在他万念俱灰的时候，他遇到了这个项目。当时，孤儿院内只有两个孩子，但是博正仍然无私地奉献出了自己的全部积蓄。现在，随着越来越多的人无私地奉献，这个项目也越做越大。 “我曾经被灾害夺走了一切，但现在，这些孩子们就是我的全部。”在接受媒体采访的时候，博正如是说道。
 
-这时，博正接到了门卫的电话，“院长，有两个穿着黑色长袍的人要找你。”
+这时，博正接到了门卫的电话，“院长，有两个穿长袍的人要找你。”
+
+2
+
+“博正院长，您好。”博正刚走到门口，其中一个棕瞳金发的人就向他打招呼道。
+
+“您好，不知二位是从何而来，有何贵干呢？”
+
+另一个人上前说道：“我是霍格沃茨学校的校长米卡，此次前来，是因为我们学校在贵院发现了一名有才之士。”博正这才仔细地打量了一下这个人，只见他戴着一双圆眼镜，褐色的皮肤衬托着眼镜后的绿瞳。与这个人对视了一眼，博正便感觉自己的魂魄都受到了安抚一般，有一种被春日阳光照耀的那般的温暖。
+
+“那二位请来办公室坐坐吧，请。”博正坐了个请的手势。三人便一同前往博正办公室。
+
+路上，博正不禁思索到：究竟是什么样的学校能有精神这样深邃的老师，孤儿院中又有哪个孩子能让学校的校长亲自来拜访。
+
+
 
