LR-1-Start-upd.

--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -5,7 +5,7 @@ tags: 小故事
 description: 平常的一天，不平常的故事与全新的开始。
 ---
 
-1
+### 1
 温柔的金色光辉驱散了黑夜的最后一片黑暗；阳光透过盛开的樱花瓣，在大地上映出了点点光斑；于是风儿也温柔起来了，轻轻拂过那一片粉红，与花瓣一同漫步在温柔的春日清晨。
 
 “樱花开啦！”一个孩子高兴地喊着，跑出了孤儿院宿舍，她的米色头发随风飘动，像是与她共同欣赏着这美丽的景象。
@@ -81,3 +81,27 @@ description: 平常的一天，不平常的故事与全新的开始。
 “那您此次前来，是为了哪位孩子呢？”
 
 “锦木千束。”
+
+
+
+
+
+### 2
+
+博正对所有孩子的情况了如指掌。对于锦木千束，他的记忆尤其深刻。
+
+
+
+在博正将自己的全部奉献到孤儿院的一年后，孤儿院的创始人出了车祸，不幸离世。于是博正接手了孤儿院的所有工作。从未自己做过任何饭菜的博正只得一手看着教学的书本，一手为孩子们和自己做出不算美味的饭菜。也就在接受了媒体采访和社会援助后，孤儿院才有了经济基础为孩子们提供更好的环境。
+
+随着时间慢慢过去，孩子们慢慢长大，新的苦恼也来了。由于这里的大多数孩子没有身份证明，几乎所有的学校都不接收他们前去读书。越来越多的孩子过了上小学的年龄，却并没有去学校读书的机会。为了解决这个问题，博正招聘了几位老师专门负责孩子们的学习。但受限于经费有限，不可能招到很多老师，一门课能找一位老师已经很不错了，甚至有好几门课由一位老师教授的情况。
+
+随着媒体的报道，事情也有了转机。当地最大的一家企业“果里科技”承诺要解决孩子们的读书问题，但是两三个月过去了，依然还剩下一小半孩子因为各种原因没能上学。他们中的大多数是因为过了入学年龄，需要办理复杂的插班手续而被耽搁。锦木千束是最后办理的那一个，由于其他学校的学生名额已经爆满，果里为他们找了东京最好的小学。
+
+那是一个晴朗的清晨，博正领着锦木千束前去办理入学手续。工作人员示意千束先坐在椅子上，让博正随他进入办公室。但就在进入办公室后，工作人员却向他索要近300日元，还说道：“这已经是我们给果里的内部价了。你要知道，东京的一个学位要有多不容易。”要知道，那时孤儿院的经费一共才不到400日元每月，博正只得离开了那个工作人员的办公室。出来之后，他不忍看向千束那双渴望知识的眼睛。眼尖的千束却从院长的眼睛中懂得了一切，说道：“没事的啦老师，我在咱那里也学得挺好的呀，老师们讲的课也很有意思的啦。”然而，博正知道，这只不过是千束安慰她的话罢了。每天跟着那些学龄前的孩子一起听课，怕就把这么聪明的孩子给耽误了，但面对天价入学金，博正也无可奈何，只得拜托那些老师，每天单独给千束讲一些知识。
+
+
+
+如今有学校主动想要招千束入学，可令博正太开心了，但来者却又是什么神秘的“魔法学校”。想着想着，博正的脑子又有些晕乎乎的了。
+
+米卡又开始向博正介绍起了霍格沃茨的情况。
