--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -74,7 +74,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 博正简直不敢相信自己的眼睛，这难道是什么魔术吗？难道窗下面放了个笼子，而米卡手中拿的是遥控器？博正伸出头向窗下看去，但那里一无所有。博正关上窗，回到了座位上。
 
-”一般地，没有魔法天赋的人会被称作麻瓜。“米卡解释道，”但是，也会有一小部分麻瓜觉醒出魔法天赋，甚至是极强的天赋。如果对这些人加以培养，就能成长为极其优秀的巫师，为魔法界做出杰出贡献。我们的魔法部，就相当于巫师的国家政府，就曾有一任部长是麻瓜出身。“
+“一般地，没有魔法天赋的人会被称作麻瓜。”米卡解释道，“但是，也会有一小部分麻瓜觉醒出魔法天赋，甚至是极强的天赋。如果对这些人加以培养，就能成长为极其优秀的巫师，为魔法界做出杰出贡献。我们的魔法部，就相当于巫师的国家政府，就曾有一任部长是麻瓜出身。”
 
 麻瓜？巫师？魔法部？博正重复着这几个词。生活这么多年的世界背后竟然还隐藏着这么离奇的秘密。博正坐在自己的座位上，被突如其来的各种信息冲昏了头脑。
 
