--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -10,11 +10,15 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “樱花开啦！”一个孩子高兴地喊着，跑出了孤儿院宿舍，她的米色头发随风飘动，像是与她共同欣赏着这美丽的景象。
 
-今天是锦木千束第八次在东京孤儿院欣赏樱花了。据孤儿院的护工所说，八年前的一个冬日的雨夜，院长在回家的时候看到一个孩子在大门口躺着，蜷缩着身体，随着飘落的雨水颤抖着，浑身上下只有一条湿透了的被子企图为她留下一丝温暖。院长便将这个孩子抱进了屋内。不知道这个孩子是什么时候被放在那里的，但是她蜷成一团的身体和紧锁的眉头可以看出时间不短。好在，在护工抱着她在火炉边暖和了一会之后，她睁开了双眼，露出了她那美丽的红瞳。这时，检查身份的护工也发现了压在棉被内的纸条：
+今天是锦木千束第八次在东京孤儿院欣赏樱花了。据孤儿院的护工所说，八年前的一个冬日的雨夜，院长博正正撑开伞回家。但就当他快走出孤儿院大门的时候，一阵强风吹得他睁不开眼。当风停后，好像有一块黑色地幕布被拉开了似的，博正突然看到一个孩子在大门口躺着，蜷缩着身体，随着飘落的雨水颤抖着，浑身上下只有一条湿透了的被子企图为她留下一丝温暖。院长便将这个孩子抱进了屋内。不知道这个孩子是什么时候被放在那里的，但是她蜷成一团的身体和紧锁的眉头可以看出时间不短。好在，在护工抱着她在火炉边暖和了一会之后，她睁开了双眼，露出了她那美丽的红瞳。这时，检查身份的护工也发现了压在棉被内的纸条：
 
 > 锦木千束  3岁  9月23日
+>
+> 请好好照顾她，八年后再见
 
-于是锦木千束在孤儿院的生活开始了。
+让人奇怪的是那个神秘的数字，难道孩子的父母八年后来接她吗，那为什么又要丢掉孩子呢？
+
+但是，不管怎样，锦木千束在孤儿院的生活开始了。
 
 
 
@@ -22,9 +26,9 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 
 
-“千束，快来吃早饭啦！”护工在门口呼唤着千束。“来啦！”应答一声，千束恋恋不舍地跑向食堂。孤儿院的早饭绝对不算什么丰厚的大餐。“但在孤儿院里绝对算是一流的啦！”一个名叫依晨的孩子曾这样给千束说过。依晨是这群孩子中年龄最大的。一个月前，因为原来的孤儿院解散，被送到了这里。“我原来待的那个地方吃的还不如这儿呢。那里还有一个特别凶的女孩子，惹恼了她你可就小心吧。但是她其实挺热心的，如果你真的有什么找她帮忙，她也是会帮的。”每次依晨讲起他在之前孤儿院的故事，其他孩子们都会让他多讲一些，毕竟对于这些从记事起就在孤儿院长大的孩子来说，这些故事可是闻所未闻的。于是依晨又讲起了那个女孩子，“有一次，我们一个同学调皮地乱转，不小心失足掉进了孤儿院的荷花池里，很快，他便被无情的湖水吞没了。我便迅速去叫老师，但就在我和老师回来的时候，那个掉进荷花池中的孩子却已经被救出来了。据旁边的孩子所说，那个女孩子径直跳了进去，就在其他孩子担心的时候，她抱着那个落水的孩子浮出了水面。唉，不知道她现在在哪里呢。”
+“千束，快来吃早饭啦！星期天也要按时作息哦！”护工在门口呼唤着千束。“来啦！”应答一声，千束恋恋不舍地跑向食堂。孤儿院的早饭绝对不算什么丰厚的大餐。“但在孤儿院里绝对算是一流的啦！”一个名叫依晨的孩子曾这样给千束说过。依晨是这群孩子中年龄最大的。一个月前，因为原来的孤儿院解散，被送到了这里。“我原来待的那个地方吃的还不如这儿呢。那里还有一个特别凶的女孩子，惹恼了她你可就小心吧。但是她其实挺热心的，如果你真的有什么找她帮忙，她也是会帮的。”每次依晨讲起他在之前孤儿院的故事，其他孩子们都会让他多讲一些，毕竟对于这些从记事起就在孤儿院长大的孩子来说，这些故事可是闻所未闻的。于是依晨又讲起了那个女孩子，“有一次，我们一个同学调皮地乱转，不小心失足掉进了孤儿院的荷花池里，很快，他便被无情的湖水吞没了。我便迅速去叫老师，但就在我和老师回来的时候，那个掉进荷花池中的孩子却已经被救出来了。据旁边的孩子所说，那个女孩子径直跳了进去，就在其他孩子担心的时候，她抱着那个落水的孩子浮出了水面。唉，不知道她现在在哪里呢。”
 
-看着开心吃饭的孩子们，院长博正欣慰地露出了笑容。十年前，一场突如其来的地震摧毁了博正的一切，全家唯有他自己得以幸存。就在他万念俱灰的时候，他遇到了孤儿院。当时，孤儿院内只有两个孩子，并且濒临破产。博正无私地奉献出了自己的全部积蓄。现在，随着越来越多人的无私奉献，这个项目也越做越大。 “我曾经被灾害夺走了一切，但现在，这些孩子们就是我的全部。”在接受媒体采访的时候，博正如是说道。
+看着开心吃饭的孩子们，博正欣慰地露出了笑容。十年前，一场突如其来的地震摧毁了博正的一切，全家唯有他自己得以幸存。就在他万念俱灰的时候，他遇到了孤儿院。当时，孤儿院内只有两个孩子，并且濒临破产。博正无私地奉献出了自己的全部积蓄。现在，随着越来越多人的无私奉献，这个项目也越做越大。 “我曾经被灾害夺走了一切，但现在，这些孩子们就是我的全部。”在接受媒体采访的时候，博正如是说道。
 
 这时，博正接到了门卫的电话，“院长，有两个穿长袍的人要找你。”
 
@@ -38,9 +42,9 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “那二位请来办公室坐坐吧，请。”博正坐了个请的手势。三人便一同前往博正办公室。
 
+
+
 路上，博正不禁思索到：究竟是什么样的学校能有精神这样深邃的老师，孤儿院中又有哪个孩子能让学校的校长亲自来拜访。
-
-
 
 食堂中，千束突然感觉有人在看自己，她抬头望去，只见两个穿着长袍的人跟在院长后面，其中一个人正在看着她。千束好像看见那个人向她点了点头。就当千束想仔细看看那个人的时候，他却扭过头去了。
 
@@ -70,7 +74,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “这不重要，一个有经验的巫师从来不会让自己的屁股面临被烧的风险。”米卡回道。说罢，米卡又扭头看向博正，“能否麻烦您从窗边挪开呢，我接下来要施的这个魔法可能有些，吵闹，谢谢您！”
 
-米卡将那个木棍指向窗户，低声念了些什么，窗外突然出现了一群黄色的飞鸟，叽叽喳喳地吵闹着，向着远方飞去。
+米卡将那个木棍指向窗户，低声念了些什么，一阵风吹过后，窗外突然出现了一群黄色的飞鸟，叽叽喳喳地吵闹着，向着远方飞去。
 
 博正简直不敢相信自己的眼睛，这难道是什么魔术吗？难道窗下面放了个笼子，而米卡手中拿的是遥控器？博正伸出头向窗下看去，但那里一无所有。博正关上窗，回到了座位上。
 
@@ -82,13 +86,11 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “锦木千束。”
 
-
-
-
+突然，他想起了那个雨夜，同样是一阵风吹过，他就看到了大门外的千束。八年，确实已经过去八年了。
 
 ### 2
 
-博正对所有孩子的情况了如指掌。对于锦木千束，他的记忆尤其深刻。
+博正对所有孩子的情况了如指掌。对于锦木千束，他的记忆尤其深刻
 
 
 
@@ -98,10 +100,55 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 随着媒体的报道，事情也有了转机。当地最大的一家企业“果里科技”承诺要解决孩子们的读书问题，但是两三个月过去了，依然还剩下一小半孩子因为各种原因没能上学。他们中的大多数是因为过了入学年龄，需要办理复杂的插班手续而被耽搁。锦木千束是最后办理的那一个，由于其他学校的学生名额已经爆满，果里为他们找了东京最好的小学。
 
-那是一个晴朗的清晨，博正领着锦木千束前去办理入学手续。工作人员示意千束先坐在椅子上，让博正随他进入办公室。但就在进入办公室后，工作人员却向他索要近300日元，还说道：“这已经是我们给果里的内部价了。你要知道，东京的一个学位要有多不容易。”要知道，那时孤儿院的经费一共才不到400日元每月，博正只得离开了那个工作人员的办公室。出来之后，他不忍看向千束那双渴望知识的眼睛。眼尖的千束却从院长的眼睛中懂得了一切，说道：“没事的啦老师，我在咱那里也学得挺好的呀，老师们讲的课也很有意思的啦。”然而，博正知道，这只不过是千束安慰她的话罢了。每天跟着那些学龄前的孩子一起听课，怕就把这么聪明的孩子给耽误了，但面对天价入学金，博正也无可奈何，只得拜托那些老师，每天单独给千束讲一些知识。
+那是一个晴朗的清晨，博正领着锦木千束前去办理入学手续。工作人员示意千束先坐在椅子上，让博正随他进入办公室。进入办公室后，工作人员递给博正一张清单，上面写了千束的择校费以及各种必需品的费用。博正开心的笑容刹那间消失了，面色铁青，又从铁青变成灰白。“这价格，五十万日元！您没在开玩笑吧？”“这已经是我们给果里的内部价了。要知道，有进入我们这里读书的机会，普通人连想都不敢想。”那时孤儿院的经费一个月才不过几万日元，博正低着头走出了办公室，看向满脸期待的千束，他煞白的脸又变得通红。眼尖的千束马上就发现了院长神色的反常：“没事的啦院长，我在咱那里也学得挺好的呀，老师们讲的课也很有意思的啦。”博正的眼神更加黯淡了。千束这样聪明的孩子，每天跟着那些学龄前的孩子一起听课，就像不遇伯乐的千里马，终会被冷酷的现实所埋没；但面对天价的入学金，博正却又无可奈何，只得拜托那些老师，每天单独给千束讲一些知识。
 
 
 
-如今有学校主动想要招千束入学，可令博正太开心了，但来者却又是什么神秘的“魔法学校”。想着想着，博正的脑子又有些晕乎乎的了。
+如今有学校主动想要招千束入学，可令博正太开心了，但来者却又是什么神秘的“魔法学校”。不过，千束的到来确实伴有着一丝蹊跷，难道那也是魔法吗？
 
-米卡又开始向博正介绍起了霍格沃茨的情况。
+就在博正疑惑之时，米卡却像看透了他的内心，“八年前，我们不是约定好了吗？”
+
+博正抬头看向米卡，米卡正面带微笑地看着他。看着米卡的长袍，博正似乎明白了。
+
+“那孩子毕业后能干什么呢？”博正问道。
+
+“这您不必担心，”米卡笑道，“从霍格沃茨毕业的学生从来不会缺少在魔法世界就业的机会。而像千束这样具有魔法天赋的孩子，以后定能成为魔法世界的知名人物。”
+
+又是一阵长时间的沉默后，博正张口说道：“我还有一个疑问。”
+
+“您说。”
+
+“如果您早就认识了千束，为什么八年前，您要将她放在这里呢？”
+
+“这关系到八年前一个震撼了整个魔法世界，甚至差点影响到麻瓜世界的事情，而千束就是这一个事件的关键人物之一。”好像想起了悲伤之事，米卡脸上的微笑少了几分，“是为了保护千束，我们才将她放在这里。所以，十分感谢您八年来对她的照顾。”
+
+博正说道：“这是我应该做的，不光千束，这里所有的孩子都是我的家人。”停顿了一下，博正又问道：“那需要给千束准备什么学习用品吗？”
+
+“您不必担心这些东西了，况且，我们需要孩子准备的恐怕您在寻常的商店也买不到。”米卡说道，“因为学校比较远，所以如果您能让我们带千束过去就太好了。”
+
+“那就麻烦您了。”
+
+“那现在能请您把千束带过来吗，我需要亲手把录取通知书交给千束。”
+
+
+
+## 3
+
+锦木千束刚吃完饭，就被护工叫出了食堂。出了食堂门，她就见到了等待她的博正院长，从院长欣喜的目光中，她感觉到了似乎院长有好消息要告诉她。
+
+“千束，有学校愿意录取你了！”
+
+“真的吗！”千束高兴地跳了起来，“谢谢院长！”
+
+“其实，还是靠你自己的努力哦。”博正笑着给千束说道。
+
+“我自己的努力？”千束有些不解，自己能有什么能力，能让学校看上呢？
+
+“对的，跟我来吧！”
+
+
+
+![](https://pic.imgdb.cn/item/650276f8661c6c8e54cb095f.png)
+
+![](https://pic.imgdb.cn/item/65027462661c6c8e54ca2378.png)
+
