--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -132,23 +132,15 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 
 
-## 3
-
 锦木千束刚吃完饭，就被护工叫出了食堂。出了食堂门，她就见到了等待她的博正院长，从院长欣喜的目光中，她感觉到了似乎院长有好消息要告诉她。
 
 “千束，有学校愿意录取你了！”
 
 “真的吗！”千束高兴地跳了起来，“谢谢院长！”
 
-“其实，还是靠你自己的努力哦。”博正笑着给千束说道。
-
-“我自己的努力？”千束有些不解，自己能有什么能力，能让学校看上呢？
-
-“对的，跟我来吧！”
+“其实，还是靠你自己的努力哦。”博正笑着给千束说道，“走吧，我们去见见”
 
 
 
-![](https://pic.imgdb.cn/item/650276f8661c6c8e54cb095f.png)
-
-![](https://pic.imgdb.cn/item/65027462661c6c8e54ca2378.png)
+<img src="https://pic.imgdb.cn/item/650276f8661c6c8e54cb095f.png" style="zoom: 67%;" /><img src="https://pic.imgdb.cn/item/65027462661c6c8e54ca2378.png" style="zoom: 67%;" />
 
