--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -138,9 +138,52 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “真的吗！”千束高兴地跳了起来，“谢谢院长！”
 
-“其实，还是靠你自己的努力哦。”博正笑着给千束说道，“走吧，我们去见见”
+“其实，还是靠你自己的努力哦。”博正笑着给千束说道，“走吧，我们去见见学校的老师。”
 
 
 
-<img src="https://pic.imgdb.cn/item/650276f8661c6c8e54cb095f.png" style="zoom: 67%;" /><img src="https://pic.imgdb.cn/item/65027462661c6c8e54ca2378.png" style="zoom: 67%;" />
+千束跟着院长走进办公室，只见面前的这个大人皮肤黝黑，一头飘逸的秀发搭在肩上，一副略显厚重的黑框眼镜搭在他宽大的鼻子上。“锦木千束，很高兴再次见到你，上次见你的时候你还在襁褓里呢！“千束对眼前这位陌生人感到疑惑时，“八年前就是您把我送到这里的吗？”陌生人点了点头，递给了她一封书信：
 
+<img src="https://pic.imgdb.cn/item/650276f8661c6c8e54cb095f.png"  /><img src="https://pic.imgdb.cn/item/65027462661c6c8e54ca2378.png"  />
+
+“魔法！世界上真的存在魔法！就像童话里说的那样吗？”千束激动地问着米卡。
+
+“是真的，但是你还要经过漫长地学习才能真正掌握魔法的奥秘，我也相信你能够成为一名优秀的女巫。如果你愿意认我为师的话，那就太好了。”米卡笑道。
+
+千束看向博正，见博正微笑地点了点头。
+
+千束向后退了一步，郑重地向米卡鞠了一躬，“老师好！”
+
+“好！”米卡脸上的笑容更加灿烂了，向前一步，扶起千束的肩膀。“那我们现在就出发吧。”
+
+“现在吗？”千束说着，又看向了博正。
+
+博正说道：”要跟好米卡校长，不要乱跑哦，到了学校也要规律作息，好好学习。“
+
+”那我什么时候才能再见到院长呢。“千束说道。
+
+”等到下一个暑假就能回来了。“米卡回答道。
+
+”嗯嗯，我一定会好好学习的。“千束挺了挺胸。
+
+四人一同走到了孤儿院门口。”院长再见，“千束跳着向博正道别。
+
+博正挥了挥手，”明年再见啦，千束。“
+
+”那再见了，博正院长。“米卡也向博正到了道别，便带着千束，与吉松一起离开了。博正却站在门口，看着三人离开的背影，迟迟没有转身。保安向博正说道：“这孩子也有了自己的归宿，不也挺好的吗。”“是吧，”博正回答道，“到了分别的时候，还是有些不舍呢。”说罢，博正转身走回了孤儿院。
+
+
+
+走在东京的街道上，米卡向千束介绍道：“这是吉松信二，是我的好朋友，从我们把你送到这里开始的八年，他都在关注着你呢。”
+
+千束赶忙说道：“吉叔好！谢谢吉叔！”
+
+“你好呀，”吉松笑着回答道，“八年前，还是米卡从废墟中把你抱出来的呢，你应该谢谢他才对。”
+
+“谢谢老师！”
+
+“哈哈，”米卡笑道，“好了，该出发了。”
+
+“我们现在要去哪里呀，老师？”千束知道他们现在走的这条路，他们顺着这条路，走向的是飞机场。
+
+“伦敦。”
