--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -184,6 +184,10 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “哈哈，”米卡笑道，“好了，该出发了。”
 
-“我们现在要去哪里呀，老师？”千束知道他们现在走的这条路，他们顺着这条路，走向的是飞机场。
+“我们现在要去哪里呀，老师？”千束问道。
 
-“伦敦。”
+“我们现在去接另一个学生，比你小一岁呢。”
+
+“哇，是学妹呢，她叫什么名字呀？”
+
+“井上泷奈。”
