--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -191,3 +191,9 @@ description: 平常的一天，不平常的故事与全新的开始。
 “哇，是学妹呢，她叫什么名字呀？”
 
 “井上泷奈。”
+
+### 3
+
+米卡三人拐进了一个小巷子，向里走了几步，太阳便被周围的楼房完全遮住了。千束疑惑道：“老师，我们要去哪里找学妹呀？”米卡笑了笑，说道：“去京都。”可是，这显然不是去京都的路。千束这样想到，但还没等到她提出疑问，米卡又说道：“接下来，请你抓紧我的胳膊，不要松开。”“好的。”急忙答应了一下，千束便抓住了米卡的胳膊。“好极了，“米卡看到千束抓紧了他的胳膊，便从口袋中掏出了魔杖，”接下来的感觉可能有些，额，不适。”没等千束反应过来，吉松也掏出了他的魔杖，随着一声清脆的爆鸣，千束突然感觉自己周围仿佛都是橡胶，而她快要被这些橡胶挤扁了。就在快要坚持不住的时候，她突然感觉从橡胶管子中钻了出来，周围的压力瞬间恢复了正常。千束脚下一软，全凭抓住米卡的手才没摔倒在地上。”你没事吧，“米卡问道，”这可能需要慢慢适应。“”我没事，老师。“千束回答道，”刚才那是什么魔法吗？“一说到即将要学习的魔法，千束便激动了起来。”是的“，米卡笑着回答道，”它叫做幻影显形，不过你可能需要等到高年级了才有机会学习。“
+
+千束抬起头来，却发现他们早已不在刚才那个小巷子里，遮住太阳的也不在是楼房，而是一座大桥，空气中弥漫着的也变成了湖边花儿的香气。米卡又将魔杖装回了长袍口袋里，眼看着吉松又要说些什么，米卡抢先一步说：“放心，我不会让我的屁股被烧掉的。”
