--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -14,11 +14,8 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 > 锦木千束  3岁  9月23日
 >
-> 请好好照顾她，八年后再见
 
-让人奇怪的是那个神秘的数字，难道孩子的父母八年后来接她吗，那为什么又要丢掉孩子呢？
-
-但是，不管怎样，锦木千束在孤儿院的生活开始了。
+于是，锦木千束在孤儿院的生活开始了。
 
 
 
@@ -38,13 +35,13 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “您好，不知二位是从何而来，有何贵干呢？”
 
-另一个人上前说道：“我是霍格沃茨学校的校长，此次前来，是因为我们学校在贵院发现了一名有才之士。”博正这才仔细地打量了一下这个人，只见他戴着一双圆眼镜，褐色的皮肤衬托着眼镜后的绿瞳。与这个人对视了一眼，博正便感觉自己的魂魄都受到了安抚一般，有一种被春日阳光照耀的那般的温暖。
+另一个人上前说道：“我是霍格沃茨学校的老师，此次前来，是因为我们学校在贵院发现了一名有才之士。”博正这才仔细地打量了一下这个人，只见他戴着一双圆眼镜，褐色的皮肤衬托着眼镜后的绿瞳。与这个人对视了一眼，博正便感觉自己的魂魄都受到了安抚一般，有一种被春日阳光照耀的那般的温暖。
 
 “那二位请来办公室坐坐吧，请。”博正坐了个请的手势。三人便一同前往博正办公室。
 
 
 
-路上，博正不禁思索到：究竟是什么样的学校能有精神这样深邃的老师，孤儿院中又有哪个孩子能让学校的校长亲自来拜访。
+路上，博正不禁思索到：究竟是什么样的学校能有精神这样深邃的老师，孤儿院中又有哪个孩子能让他亲自来拜访。
 
 食堂中，千束突然感觉有人在看自己，她抬头望去，只见两个穿着长袍的人跟在院长后面，其中一个人正在看着她。千束好像看见那个人向她点了点头。就当千束想仔细看看那个人的时候，他却扭过头去了。
 
@@ -56,7 +53,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “您好，我是米卡，这位是吉松信二。”那个戴着圆眼镜的人说道说道。
 
-“您好，米卡校长。能否向我介绍一下贵校的情况呢？”
+“您好，米卡老师。能否向我介绍一下贵校的情况呢？”
 
 “啊，是这样的。我们学校坐落在大不列颠，致力于培养全球的优秀人才。准确的说，我们是一所魔法学校。”
 
@@ -106,29 +103,25 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 如今有学校主动想要招千束入学，可令博正太开心了，但来者却又是什么神秘的“魔法学校”。不过，千束的到来确实伴有着一丝蹊跷，难道那也是魔法吗？
 
-就在博正疑惑之时，米卡却像看透了他的内心，“八年前，我们不是约定好了吗？”
-
-博正抬头看向米卡，米卡正面带微笑地看着他。看着米卡的长袍，博正似乎明白了。
-
 “那孩子毕业后能干什么呢？”博正问道。
 
 “这您不必担心，”米卡笑道，“从霍格沃茨毕业的学生从来不会缺少在魔法世界就业的机会。而像千束这样具有魔法天赋的孩子，以后定能成为魔法世界的知名人物。”
 
-又是一阵长时间的沉默后，博正张口说道：“我还有一个疑问。”
+“我还有一个疑问。”博正说道。
 
-“您说。”
+“您请问。”
 
-“如果您早就认识了千束，为什么八年前，您要将她放在这里呢？”
+“为什么您要跨越千里来日本招千束入学呢？”
 
-“这关系到八年前一个震撼了整个魔法世界，甚至差点影响到麻瓜世界的事情，而千束就是这一个事件的关键人物之一。”好像想起了悲伤之事，米卡脸上的微笑少了几分，“是为了保护千束，我们才将她放在这里。所以，十分感谢您八年来对她的照顾。”
+“当然是因为被千束的才华所吸引，”米卡笑道，“十天前，信二写信给我，说发现了两个极具才华的孩子，其中一个，就是千束。”
 
-博正说道：“这是我应该做的，不光千束，这里所有的孩子都是我的家人。”停顿了一下，博正又问道：“那需要给千束准备什么学习用品吗？”
+“好吧，”博正回答道，却还是有些犹豫，“突然告诉我要让千束去英国上学，我还是有些不舍和担忧的。”
 
-“您不必担心这些东西了，况且，我们需要孩子准备的恐怕您在寻常的商店也买不到。”米卡说道，“因为学校比较远，所以如果您能让我们带千束过去就太好了。”
+“我完全理解，”米卡点了点头，说道，“但是还是请您放心。从我个人来说，我这么大了，也没有子嗣，如果可以的话，我想让千束认我为师，我愿意将她当成自己的孩子一样培养，让她成长为一个优秀的巫师。”
 
-“那就麻烦您了。”
+博正盯着窗外，仿佛在思索，米卡和吉松信二便静静地等待。几分钟后，博正仿佛下定了决心，说道：“那以后，千束就拜托您了。”
 
-“那现在能请您把千束带过来吗，我需要亲手把录取通知书交给千束。”
+“当然，请您放心。”米卡点了点头，说道，“那现在能请您把千束带过来吗，我需要亲手把录取通知书交给千束。”
 
 
 
@@ -144,7 +137,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 千束跟着院长走进办公室，只见面前的这个大人皮肤黝黑，一头飘逸的秀发搭在肩上，一副略显厚重的黑框眼镜搭在他宽大的鼻子上。“锦木千束，很高兴再次见到你，上次见你的时候你还在襁褓里呢！“千束对眼前这位陌生人感到疑惑时，“八年前就是您把我送到这里的吗？”陌生人点了点头，递给了她一封书信：
 
-<img src="https://pic.imgdb.cn/item/650276f8661c6c8e54cb095f.png"  /><img src="https://pic.imgdb.cn/item/65027462661c6c8e54ca2378.png"  />
+<img src="https://pic.imgdb.cn/item/650bfdabc458853aefc00b9f.png"  /><img src="https://pic.imgdb.cn/item/65027462661c6c8e54ca2378.png"  />
 
 “魔法！世界上真的存在魔法！就像童话里说的那样吗？”千束激动地问着米卡。
 
@@ -158,27 +151,27 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “现在吗？”千束说着，又看向了博正。
 
-博正说道：”要跟好米卡校长，不要乱跑哦，到了学校也要规律作息，好好学习。“
+博正说道：“要跟好米卡老师，不要乱跑哦，到了学校也要规律作息，好好学习。”
 
-”那我什么时候才能再见到院长呢。“千束说道。
+“那我什么时候才能再见到院长呢。”千束说道。
 
-”等到下一个暑假就能回来了。“米卡回答道。
+“等到下一个暑假就能回来了。”米卡回答道。
 
-”嗯嗯，我一定会好好学习的。“千束挺了挺胸。
+“嗯嗯，我一定会好好学习的。”千束挺了挺胸。
 
-四人一同走到了孤儿院门口。”院长再见，“千束跳着向博正道别。
+四人一同走到了孤儿院门口。“院长再见，”千束跳着向博正道别。
 
-博正挥了挥手，”明年再见啦，千束。“
+博正挥了挥手，“明年再见啦，千束。”
 
-”那再见了，博正院长。“米卡也向博正到了道别，便带着千束，与吉松一起离开了。博正却站在门口，看着三人离开的背影，迟迟没有转身。保安向博正说道：“这孩子也有了自己的归宿，不也挺好的吗。”“是吧，”博正回答道，“到了分别的时候，还是有些不舍呢。”说罢，博正转身走回了孤儿院。
+“那再见了，博正院长。”米卡也向博正到了道别，便带着千束，与吉松一起离开了。博正却站在门口，看着三人离开的背影，迟迟没有转身。保安向博正说道：“这孩子也有了自己的归宿，不也挺好的吗。”“是吧，”博正回答道，“到了分别的时候，还是有些不舍呢。”说罢，博正转身走回了孤儿院。
 
 
 
-走在东京的街道上，米卡向千束介绍道：“这是吉松信二，是我的好朋友，从我们把你送到这里开始的八年，他都在关注着你呢。”
+走在东京的街道上，米卡向千束介绍道：“这是吉松信二，是我的好朋友，也是他向我推荐的你呢。”
 
 千束赶忙说道：“吉叔好！谢谢吉叔！”
 
-“你好呀，”吉松笑着回答道，“八年前，还是米卡从废墟中把你抱出来的呢，你应该谢谢他才对。”
+“你好呀，”吉松笑着回答道，“米卡是个爱才的人，他不远千里来日本接你，你应该谢谢他才对。”
 
 “谢谢老师！”
 
@@ -186,14 +179,54 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “我们现在要去哪里呀，老师？”千束问道。
 
-“我们现在去接另一个学生，比你小一岁呢。”
-
-“哇，是学妹呢，她叫什么名字呀？”
-
-“井上泷奈。”
+“我们现在去接另一个学生。”
 
 ### 3
 
-米卡三人拐进了一个小巷子，向里走了几步，太阳便被周围的楼房完全遮住了。千束疑惑道：“老师，我们要去哪里找学妹呀？”米卡笑了笑，说道：“去京都。”可是，这显然不是去京都的路。千束这样想到，但还没等到她提出疑问，米卡又说道：“接下来，请你抓紧我的胳膊，不要松开。”“好的。”急忙答应了一下，千束便抓住了米卡的胳膊。“好极了，”米卡看到千束抓紧了他的胳膊，便从口袋中掏出了魔杖，“接下来的感觉可能有些，额，不适。”没等千束反应过来，吉松也掏出了他的魔杖，随着一声清脆的爆鸣，千束突然感觉自己周围仿佛都是橡胶，而她快要被这些橡胶挤扁了。就在快要坚持不住的时候，她突然感觉从橡胶管子中钻了出来，周围的压力瞬间恢复了正常。千束脚下一软，全凭抓住米卡的手才没摔倒在地上。“你没事吧，”米卡问道，“这可能需要慢慢适应。”“我没事，老师。”千束回答道，“刚才那是什么魔法呀？”一说到即将要学习的魔法，千束便激动了起来。米卡回答道，“它叫做幻影显形，不过你可能需要等到高年级了才有机会学习。”
+米卡三人拐进了一个小巷子，向里走了几步，太阳便被周围的楼房完全遮住了。千束疑惑道：“老师，我们要去哪里找学妹呀？”米卡笑了笑，说道：“去京都。”可是，这显然不是去京都的路。千束这样想到，但还没等到她提出疑问，米卡又说道：“接下来，请你抓紧我的胳膊，不要松开。”“好的。”急忙答应了一下，千束便抓住了米卡的胳膊。“好极了，”米卡看到千束抓紧了他的胳膊，便从口袋中掏出了魔杖，“接下来的感觉可能有些，额，不适。”没等千束反应过来，吉松也掏出了他的魔杖，随着一声清脆的爆鸣，千束突然感觉自己周围仿佛都是橡胶，而她快要被这些橡胶挤扁了。就在快要坚持不住的时候，她突然感觉从橡胶管子中钻了出来，周围的压力瞬间恢复了正常。千束脚下一软，幸好还抓着米卡的胳膊，她才没摔倒在地上。“你没事吧，”米卡问道，“这可能需要慢慢适应。”“我没事，老师。”千束回答道，“刚才那是什么魔法呀？”一说到即将要学习的魔法，千束便激动了起来。米卡回答道，“它叫做幻影显形，不过你可能需要等到高年级了才有机会学习。”
 
 千束抬起头来，却发现他们早已不在刚才那个小巷子里，遮住太阳的也不在是楼房，而是一座大桥，空气中弥漫着的也变成了湖边花儿的香气。米卡又将魔杖装回了长袍口袋里。
+
+“我们现在在京都，去接那个学生。”说着，米卡带头向桥上走去。
+
+十分钟、二十分钟、半个小时过去了，千束的体力有些不支了。米卡发现了千束的状态，向她说道：“坚持一下，我们马上就到了。”千束点了点头，嘟囔道：“老师，我们为什么不能直接幻影，额显形到那个孤儿院呢？”“当然是因为你老师的魔法技艺不够高超呀。”吉松信二打趣道。米卡微微一笑，回道：“也不知道是谁考幻影显形凭证的时候偏移了目的地5公里，掉进了湖水里，变成了落汤鸡。”
+
+“别提这事。”
+
+“怎么了，自己办的事还不让人提了？”
+
+“……”
+
+听着两个人的话，千束也不禁笑了起来，步伐也轻松了许多。
+
+“对了，千束。”米卡扭头看向千束，说道，“反正现在走路也没事，不如让我向你介绍一下霍格沃茨的情况吧。”“好呀好呀。”一听说米卡要介绍学校的情况，千束又兴奋起来了，全然没有了刚才体力不支的样子。看着千束这样，米卡和吉松信二都笑了。米卡便介绍道：“霍格沃茨成立于一千多年前，共分为四个学院，分别是格兰芬多、赫奇帕奇、拉文克劳和斯莱特林；并且四个学院皆有其代表颜色与动物。这四个学院，也分别以四位创始人的姓所命名。开学宴上，每个新生都会分到一个学院中。”“那您是从哪个学院毕业的呢？”千束好奇地问道。“格兰芬多。”米卡回答道，“信二也是，我们是在去霍格沃茨的火车上认识的。”“火车？”千束疑惑道，为什么不能直接幻影显形到学校呢。“是的，开学前，学生们会从伦敦坐火车去学校。”米卡应答道。似乎看穿了千束的疑惑，他又补充道，“学校场地内施了反幻影显形咒，没有人能够在学校里幻影显形。同时，学校也没法在任何地图上标绘出来，在麻瓜眼里，学校的建筑也会变成一堆废墟。当他们想要踏足学校的时候，他们就会突然想起重要的事情，让他们远离学校。这都是为了保护学生和老师的安全。”停顿了一下，米卡又说道：“一般来说，霍格沃茨只招收国内的学生，跨国招生的话，这应该是第一次呢。”
+
+就当千束还想再问些什么的时候，米卡说道：“我们到了。”
+
+千束向道路边上看去，便看到了一所孤儿院的大门。她们向那里走去。保安向这个孤儿院的院长请示之后，便领着她们去往了院长的办公室。米卡又向这个孤儿院长说明了来意。这个孤儿院长却没有像博正一样不舍，几句话之后，就将那个女孩领了过来。
+
+跟着孤儿院长走进来的那个女孩眼睛中带着沉稳与严肃，黑色的长发随着微风飘舞着，就如同玫瑰的花刺，似乎在驱散着别人，警告他们与她保持距离。
+
+孤儿院长对米卡说道：“签了这个协议，你就可以带她走了。”
+
+米卡似乎也被这个孤儿院长给震惊到了，并没有着急签字，而是转向了那个女孩，将入学通知书递给了她。
+
+那个女孩看了看入学通知书，默默念道：“霍格沃茨？”读完之后，又抬头看向米卡。
+
+看女孩读完了通知书，米卡便问道：“你愿意拜我为师，跟我去英国读书吗？”
+
+出乎意料的是，女孩没有任何迟疑，直接向米卡深深地鞠了一躬，说道：“老师好！我愿意跟您学习。”
+
+“好。”米卡露出了笑容，拿起笔，在领养协议上签了字。
+
+走出了孤儿院的门，四人便向机场走去。米卡向那个女孩子介绍到：“这是吉松信二，我的朋友，是他发现了你们的魔法天赋，并向我介绍的。这是锦木千束，你们以后都以后要在一起学习，要好好相处哦。”千束激动地握住了那个女孩子地手，说道：“你好呀，你叫什么名字呀？”那个女孩子显然被千束地热情所震惊到了，愣了一下，才说道：“你好，我叫井上泷奈，今后……”“泷奈！”还没等泷奈说完话，千束又说道：“今年多大了呀？”“十岁”“哦哦，我比你大一岁，是姐姐呦，不过叫我千束就可以啦！”
+
+看着两个人，米卡和吉松信二都露出了笑容。
+
+走到了机场，吉松信二向米卡说道：“不再多住几天吗，米卡？”米卡回答道：“不了，学校还有些事情要忙，动物棚不知道被什么带有强烈魔法波动东西给击中了，整个棚子都烧焦了，整的一团糟，我还要去看看是怎么回事。”“好吧，”吉松信二苦笑道，“你总是这么忙。”“能把这两个孩子带回去，这次来日本的最大收获已经达到了。”米卡说道。吉松便打趣道：“你这人，真是有了徒弟忘了朋友，难道见见我就不配是收获吗？”米卡笑了，回答道：“那就把你除外吧！”
+
+眼瞅着飞机还有一个小时就要起飞了，他们也不敢再耽搁了，米卡便带着两个孩子向值机处走去。
+
+米卡扭过头，向吉松信二说道：“再见啦，老朋友！”千束也拉着泷奈向吉松信二挥挥手，蹦着向吉松信二道别道：“再见，吉叔！”吉松信二也挥了挥手，说道：“再见！”
+
+一个小时后，飞机起飞了，载着三人向伦敦飞去。
