--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -61,7 +61,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “您真幽默。”博正说道。
 
-“您一定不信吧。”米卡笑道，“不过如果有人突然向我提起这种事情，我应该也不会相信的。那就让我向您展示一下吧。能否麻烦您把窗户打开呢。“
+“您一定不信吧。”米卡笑道，“不过如果有人突然向我提起这种事情，我应该也不会相信的。那就让我向您展示一下吧。能否麻烦您把窗户打开呢。”
 
 博正回头看向办公室中的窗户，如果是上午或者下午的活动时间，这个角度正好能看见在花园里嬉闹的孩子们。但此时窗外一片寂静，唯有蓝天白云与花草相伴。虽然博正并不相信所谓的“魔法”，但是本着礼貌的态度，博正还是去把窗户打开了。
 
@@ -82,8 +82,6 @@ description: 平常的一天，不平常的故事与全新的开始。
 “那您此次前来，是为了哪位孩子呢？”
 
 “锦木千束。”
-
-突然，他想起了那个雨夜，同样是一阵风吹过，他就看到了大门外的千束。八年，确实已经过去八年了。
 
 ### 2
 
@@ -159,7 +157,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “嗯嗯，我一定会好好学习的。”千束挺了挺胸。
 
-四人一同走到了孤儿院门口。“院长再见，”千束跳着向博正道别。
+四人一同走到了孤儿院门口。“院长再见！”千束跳着向博正道别。
 
 博正挥了挥手，“明年再见啦，千束。”
 
@@ -223,7 +221,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 看着两个人，米卡和吉松信二都露出了笑容。
 
-走到了机场，吉松信二向米卡说道：“不再多住几天吗，米卡？”米卡回答道：“不了，学校还有些事情要忙，动物棚不知道被什么带有强烈魔法波动东西给击中了，整个棚子都烧焦了，整的一团糟，我还要去看看是怎么回事。”“好吧，”吉松信二苦笑道，“你总是这么忙。”“能把这两个孩子带回去，这次来日本的最大收获已经达到了。”米卡说道。吉松便打趣道：“你这人，真是有了徒弟忘了朋友，难道见见我就不配是收获吗？”米卡笑了，回答道：“那就把你除外吧！”
+走到了机场，吉松信二向米卡说道：“不再多住几天吗，米卡？”米卡回答道：“不了，学校还有些事情要忙，牲畜棚不知道被什么带有强烈魔法波动东西给击中了，整个棚子都烧焦了，整的一团糟，我还要去看看是怎么回事。”“好吧，”吉松信二苦笑道，“你总是这么忙。”“能把这两个孩子带回去，这次来日本的最大收获已经达到了。”米卡说道。吉松便打趣道：“你这人，真是有了徒弟忘了朋友，难道见见我就不配是收获吗？”米卡笑了，回答道：“那就把你除外吧！”
 
 眼瞅着飞机还有一个小时就要起飞了，他们也不敢再耽搁了，米卡便带着两个孩子向值机处走去。
 
