--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -221,7 +221,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 看着两个人，米卡和吉松信二都露出了笑容。
 
-走到了机场，吉松信二向米卡说道：“不再多住几天吗，米卡？”米卡回答道：“不了，学校还有些事情要忙，牲畜棚不知道被什么带有强烈魔法波动东西给击中了，整个棚子都烧焦了，整的一团糟，我还要去看看是怎么回事。”“好吧，”吉松信二苦笑道，“你总是这么忙。”“能把这两个孩子带回去，这次来日本的最大收获已经达到了。”米卡说道。吉松便打趣道：“你这人，真是有了徒弟忘了朋友，难道见见我就不配是收获吗？”米卡笑了，回答道：“那就把你除外吧！”
+走到了机场，吉松信二向米卡说道：“不再多住几天吗，米卡？”米卡回答道：“不了，学校还有些事情要忙，牲畜棚不知道被什么带有强烈魔法波动东西给击中了，整个棚子都烧焦了，整的一团糟，我还要去看看是怎么回事。”“好吧，”吉松信二苦笑道，“你总是这么忙。”“能把这两个孩子带回去，这次来日本的最大收获已经达到了。”米卡说道。听米卡这么说，吉松信二便开玩笑道：“你这人，真是有了徒弟忘了朋友，难道见见我就不配是收获吗？”米卡笑了，回答道：“那就把你除外吧！”
 
 眼瞅着飞机还有一个小时就要起飞了，他们也不敢再耽搁了，米卡便带着两个孩子向值机处走去。
 
