--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -23,7 +23,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 
 
-“千束，快来吃早饭啦！星期天也要按时作息哦！”护工在门口呼唤着千束。“来啦！”应答一声，千束恋恋不舍地跑向食堂。孤儿院的早饭绝对不算什么丰厚的大餐。“但在孤儿院里绝对算是一流的啦！”一个名叫依晨的孩子曾这样给千束说过。依晨是这群孩子中年龄最大的。一个月前，因为原来的孤儿院解散，被送到了这里。“我原来待的那个地方吃的还不如这儿呢。那里还有一个特别凶的女孩子，惹恼了她你可就小心吧。但是她其实挺热心的，如果你真的有什么找她帮忙，她也是会帮的。”每次依晨讲起他在之前孤儿院的故事，其他孩子们都会让他多讲一些，毕竟对于这些从记事起就在孤儿院长大的孩子来说，这些故事可是闻所未闻的。于是依晨又讲起了那个女孩子，“有一次，我们一个同学调皮地乱转，不小心失足掉进了孤儿院的荷花池里，很快，他便被无情的湖水吞没了。我便迅速去叫老师，但就在我和老师回来的时候，那个掉进荷花池中的孩子却已经被救出来了。据旁边的孩子所说，那个女孩子径直跳了进去，就在其他孩子担心的时候，她抱着那个落水的孩子浮出了水面。唉，不知道她现在在哪里呢。”
+“千束，快来吃早饭啦！星期天也要按时作息哦！”护工在门口呼唤着千束。“来啦！”应答一声，千束恋恋不舍地跑向食堂。孤儿院的早饭绝对不算什么丰厚的大餐。“但在孤儿院里绝对算是一流的啦！”一个名叫依晨的孩子曾这样给千束说过。依晨是这群孩子中年龄最大的，一个月前，他因为原来的孤儿院解散，被送到了这里。“我原来待的那个地方吃的还不如这儿呢。那里还有一个特别凶的女孩子，惹恼了她你可就小心吧。但是她其实挺热心的，如果你真的有什么找她帮忙，她也是会帮的。”每次依晨讲起他在之前孤儿院的故事，其他孩子们都会让他多讲一些，毕竟对于这些从记事起就在孤儿院长大的孩子来说，这些故事可是闻所未闻的。于是依晨又讲起了那个女孩子，“有一次，我们一个同学调皮地乱转，不小心失足掉进了孤儿院的荷花池里，很快，他便被无情的湖水吞没了。我便迅速去叫老师，但就在我和老师回来的时候，那个掉进荷花池中的孩子却已经被救出来了。据旁边的孩子所说，那个女孩子径直跳了进去，就在其他孩子担心的时候，她抱着那个落水的孩子浮出了水面。唉，不知道她现在在哪里呢。”
 
 看着开心吃饭的孩子们，博正欣慰地露出了笑容。十年前，一场突如其来的地震摧毁了博正的一切，全家唯有他自己得以幸存。就在他万念俱灰的时候，他遇到了孤儿院。当时，孤儿院内只有两个孩子，并且濒临破产。博正无私地奉献出了自己的全部积蓄。现在，随着越来越多人的无私奉献，这个项目也越做越大。 “我曾经被灾害夺走了一切，但现在，这些孩子们就是我的全部。”在接受媒体采访的时候，博正如是说道。
 
@@ -225,6 +225,6 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 眼瞅着飞机还有一个小时就要起飞了，他们也不敢再耽搁了，米卡便带着两个孩子向值机处走去。
 
-米卡扭过头，向吉松信二说道：“再见啦，老朋友！”千束也拉着泷奈向吉松信二挥挥手，蹦着向吉松信二道别道：“再见，吉叔！”吉松信二也挥了挥手，说道：“再见！”
+米卡扭过头，向吉松信二说道：“再见！”千束也拉着泷奈向吉松信二挥挥手，蹦着向吉松信二道别道：“再见，吉叔！”吉松信二挥了挥手，说道：“再见！”
 
 一个小时后，飞机起飞了，载着三人向伦敦飞去。
