--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -3,9 +3,11 @@ title: 第一册-序章
 date: 2023-09-07 17:07:19
 tags: 小故事
 description: 平常的一天，不平常的故事与全新的开始。
+
 ---
 
 ### 1
+
 温柔的金色光辉驱散了黑夜的最后一片黑暗；阳光透过盛开的樱花瓣，在大地上映出了点点光斑；于是风儿也温柔起来了，轻轻拂过那一片粉红，与花瓣一同漫步在温柔的春日清晨。
 
 “樱花开啦！”一个孩子高兴地喊着，跑出了孤儿院宿舍，她的米色头发随风飘动，像是与她共同欣赏着这美丽的景象。
@@ -13,7 +15,6 @@ description: 平常的一天，不平常的故事与全新的开始。
 今天是锦木千束第八次在东京孤儿院欣赏樱花了。据孤儿院的护工所说，八年前的一个冬日的雨夜，院长博正正撑开伞回家。但就当他快走出孤儿院大门的时候，一阵强风吹得他睁不开眼。当风停后，好像有一块黑色地幕布被拉开了似的，博正突然看到一个孩子在大门口躺着，蜷缩着身体，随着飘落的雨水颤抖着，浑身上下只有一条湿透了的被子企图为她留下一丝温暖。院长便将这个孩子抱进了屋内。不知道这个孩子是什么时候被放在那里的，但是她蜷成一团的身体和紧锁的眉头可以看出时间不短。好在，在护工抱着她在火炉边暖和了一会之后，她睁开了双眼，露出了她那美丽的红瞳。这时，检查身份的护工也发现了压在棉被内的纸条：
 
 > 锦木千束  3岁  9月23日
->
 
 于是，锦木千束在孤儿院的生活开始了。
 
@@ -181,7 +182,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 ### 3
 
-米卡三人拐进了一个小巷子，向里走了几步，太阳便被周围的楼房完全遮住了。千束疑惑道：“老师，我们要去哪里找学妹呀？”米卡笑了笑，说道：“去京都。”可是，这显然不是去京都的路。千束这样想到，但还没等到她提出疑问，米卡又说道：“接下来，请你抓紧我的胳膊，不要松开。”“好的。”急忙答应了一下，千束便抓住了米卡的胳膊。“好极了，”米卡看到千束抓紧了他的胳膊，便从口袋中掏出了魔杖，“接下来的感觉可能有些，额，不适。”没等千束反应过来，吉松也掏出了他的魔杖，随着一声清脆的爆鸣，千束突然感觉自己周围仿佛都是橡胶，而她快要被这些橡胶挤扁了。就在快要坚持不住的时候，她突然感觉从橡胶管子中钻了出来，周围的压力瞬间恢复了正常。千束脚下一软，幸好还抓着米卡的胳膊，她才没摔倒在地上。“你没事吧，”米卡问道，“这可能需要慢慢适应。”“我没事，老师。”千束回答道，“刚才那是什么魔法呀？”一说到即将要学习的魔法，千束便激动了起来。米卡回答道，“它叫做幻影显形，不过你可能需要等到高年级了才有机会学习。”
+米卡三人拐进了一个小巷子，向里走了几步，太阳便被周围的楼房完全遮住了。看着露出疑惑神色的千束，米卡笑了笑，说道：“我们现在去京都。”可是，这显然不是去京都的路。千束这样想到，但还没等到她提出疑问，米卡又说道：“接下来，请你抓紧我的胳膊，不要松开。”“好的。”急忙答应了一下，千束便抓住了米卡的胳膊。“好极了，”米卡看到千束抓紧了他的胳膊，便从口袋中掏出了魔杖，“接下来的感觉可能有些，额，不适。”没等千束反应过来，吉松也掏出了他的魔杖，随着一声清脆的爆鸣，千束突然感觉自己周围仿佛都是橡胶，而她快要被这些橡胶挤扁了。就在快要坚持不住的时候，她突然感觉从橡胶管子中钻了出来，周围的压力瞬间恢复了正常。千束脚下一软，幸好还抓着米卡的胳膊，她才没摔倒在地上。“你没事吧，”米卡问道，“这可能需要慢慢适应。”“我没事，老师。”千束回答道，“刚才那是什么魔法呀？”一说到即将要学习的魔法，千束便激动了起来。米卡回答道，“它叫做幻影显形，不过你可能需要等到高年级了才有机会学习。”
 
 千束抬起头来，却发现他们早已不在刚才那个小巷子里，遮住太阳的也不在是楼房，而是一座大桥，空气中弥漫着的也变成了湖边花儿的香气。米卡又将魔杖装回了长袍口袋里。
 
@@ -221,7 +222,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 看着两个人，米卡和吉松信二都露出了笑容。
 
-走到了机场，吉松信二向米卡说道：“不再多住几天吗，米卡？”米卡回答道：“不了，学校还有些事情要忙，牲畜棚不知道被什么带有强烈魔法波动东西给击中了，整个棚子都烧焦了，整的一团糟，我还要去看看是怎么回事。”“好吧，”吉松信二苦笑道，“你总是这么忙。”“能把这两个孩子带回去，这次来日本的最大收获已经达到了。”米卡说道。听米卡这么说，吉松信二便开玩笑道：“你这人，真是有了徒弟忘了朋友，难道见见我就不配是收获吗？”米卡笑了，回答道：“那就把你除外吧！”
+走到了机场，吉松信二向米卡说道：“不再多住几天吗，米卡？”米卡回答道：“不了，学校还有些事情要忙，牲畜棚不知道被什么带有强烈魔法波动东西给击中了，整个棚子都烧焦了，整的一团糟，我还要去看看是怎么回事。”“好吧，”吉松信二苦笑道，“你总是这么忙。”“能把这两个孩子带回去，这次来日本的最大收获已经达到了。”米卡说道。吉松便打趣道：“你这人，真是有了徒弟忘了朋友，难道见见我就不配是收获吗？”米卡笑了，回答道：“那就把你除外吧！”
 
 眼瞅着飞机还有一个小时就要起飞了，他们也不敢再耽搁了，米卡便带着两个孩子向值机处走去。
 
