--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -188,7 +188,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “我们现在在京都，去接那个学生。”说着，米卡带头向桥上走去。
 
-十分钟、二十分钟、半个小时过去了，千束的体力有些不支了。米卡发现了千束的状态，向她说道：“坚持一下，我们马上就到了。”千束点了点头，嘟囔道：“老师，我们为什么不能直接幻影，额显形到那个孤儿院呢？”“当然是因为你老师的魔法技艺不够高超呀。”吉松信二打趣道。米卡微微一笑，回道：“也不知道是谁考幻影显形凭证的时候偏移了目的地5公里，掉进了湖水里，变成了落汤鸡。”
+十分钟、二十分钟、半个小时过去了，千束的体力有些不支了。米卡发现了千束的状态，向她说道：“坚持一下，我们马上就到了。”千束点了点头，嘟囔道：“老师，我们为什么不能直接幻影，额显形到那个孤儿院呢？”“当然是因为你老师的魔法技艺不够高超呀。”吉松信二揶揄道。米卡微微一笑，回道：“也不知道是谁考幻影显形凭证的时候偏移了目的地5公里，掉进了湖水里，变成了落汤鸡。”
 
 “别提这事。”
 
@@ -222,10 +222,18 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 看着两个人，米卡和吉松信二都露出了笑容。
 
-走到了机场，吉松信二向米卡说道：“不再多住几天吗，米卡？”米卡回答道：“不了，学校还有些事情要忙，牲畜棚不知道被什么带有强烈魔法波动东西给击中了，整个棚子都烧焦了，整的一团糟，我还要去看看是怎么回事。”“好吧，”吉松信二苦笑道，“你总是这么忙。”“能把这两个孩子带回去，这次来日本的最大收获已经达到了。”米卡说道。吉松便打趣道：“你这人，真是有了徒弟忘了朋友，难道见见我就不配是收获吗？”米卡笑了，回答道：“那就把你除外吧！”
+走到了机场，吉松信二向米卡说道：“不再多住几天吗，米卡？”米卡回答道：“不了，学校还有些事情要忙，牲畜棚不知道被什么带有强烈魔法波动东西给击中了，整个棚子都烧焦了，整的一团糟，我还要去看看是怎么回事。”“好吧，”吉松信二苦笑道，“你总是这么忙。”“能把这两个孩子带回去，这次来日本的最大收获已经达到了。”米卡说道。吉松便挖苦道：“你这人，真是有了徒弟忘了朋友，难道见见我就不配是收获吗？”米卡笑了，回答道：“那就算是，除了见你之外最大的收获吧！”
 
 眼瞅着飞机还有一个小时就要起飞了，他们也不敢再耽搁了，米卡便带着两个孩子向值机处走去。
 
 米卡扭过头，向吉松信二说道：“再见！”千束也拉着泷奈向吉松信二挥挥手，蹦着向吉松信二道别道：“再见，吉叔！”吉松信二挥了挥手，说道：“再见！”
 
-一个小时后，飞机起飞了，载着三人向伦敦飞去。
+一个小时后，飞机起飞了，迎着即将落下的夕阳，载着三人向伦敦飞去。
+
+### 4
+
+“哇，是奶茶店哎！”
+
+米卡、千束、泷奈三人正走在伦敦的街头。刚上飞机的时候，千束还激动个不行，一直问这问那。反而是比她小一岁的泷奈很安静，让米卡很是吃惊。不过这种激动劲儿来得快，去得也快，就在他们刚飞过太平洋之后，千束就倒在座位上睡着了。不过在下了飞机走上伦敦的街头的时候，千束似乎又有了力气，开始兴高采烈，看看这个，指指那个。此时，伦敦也快要天黑了，夕阳的最后一丝余晖照耀着路上的行人、车辆、树木，为世间万物披上了一层金色的纱衣。
+
+“那个，请问我们现在要去哪里呀，去学校吗？”一直沉默的泷奈终于张口了。米卡答道：“我们先去一个地方休息一晚，明天我会带你们去买这学期需要的东西。”“哇！巫师休息的地方是什么样的呢？”千束的注意力被两人的交谈吸引了回来，“是山洞吗？还是树屋？”“你的想象力过于丰富了，”米卡笑了笑，说道，“我们”
