--- a/source/_posts/第一册-序章.md
+++ b/source/_posts/第一册-序章.md
@@ -1,5 +1,5 @@
 ---
-title: 第一册-序章
+title: 彼岸花与会说话的金表-序章
 date: undefined
 tags: 小故事
 description: 平常的一天，不平常的故事与全新的开始。
@@ -76,7 +76,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 博正简直不敢相信自己的眼睛，这难道是什么魔术吗？难道窗下面放了个笼子，而米卡手中拿的是遥控器？博正伸出头向窗下看去，但那里一无所有。博正关上窗，回到了座位上。
 
-“一般地，没有魔法天赋的人会被称作麻瓜。”米卡解释道，“但是，也会有一小部分麻瓜觉醒出魔法天赋，甚至是极强的天赋。如果对这些人加以培养，就能成长为极其优秀的巫师，为魔法界做出杰出贡献。我们的魔法部，就相当于巫师的国家政府，就曾有一任部长是麻瓜出身。”
+“一般地，没有魔法天赋的人会被称作麻瓜。”米卡解释道，“但是，也会有一小部分麻瓜觉醒出魔法天赋，甚至是极强的天赋。如果对这些人加以培养，就能成长为极其优秀的巫师，为魔法界做出杰出贡献。我们的魔法部，就相当于巫师的国家政府，部长是麻瓜出身。”
 
 麻瓜？巫师？魔法部？博正重复着这几个词。生活这么多年的世界背后竟然还隐藏着这么离奇的秘密。博正坐在自己的座位上，被突如其来的各种信息冲昏了头脑。
 
@@ -236,4 +236,30 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 米卡、千束、泷奈三人正走在伦敦的街头。刚上飞机的时候，千束还激动个不行，一直问这问那。反而是比她小一岁的泷奈很安静，让米卡很是吃惊。不过这种激动劲儿来得快，去得也快，就在他们刚飞过太平洋之后，千束就倒在座位上睡着了。不过在下了飞机走上伦敦的街头的时候，千束似乎又有了力气，开始兴高采烈，看看这个，指指那个。此时，伦敦也快要天黑了，夕阳的最后一丝余晖照耀着路上的行人、车辆、树木，为世间万物披上了一层金色的纱衣。
 
-“那个，请问我们现在要去哪里呀，去学校吗？”一直沉默的泷奈终于张口了。米卡答道：“我们先去一个地方休息一晚，明天我会带你们去买这学期需要的东西。”“哇！巫师休息的地方是什么样的呢？”千束的注意力被两人的交谈吸引了回来，“是山洞吗？还是树屋？”“你的想象力过于丰富了，”米卡笑了笑，说道，“我们”
+“那个，请问我们现在要去哪里呀，去学校吗？”一直沉默的泷奈终于张口了。米卡答道：“我们先去一个地方休息一晚，明天我会带你们去买这学期需要的东西。”“哇！巫师休息的地方是什么样的呢？”千束的注意力被两人的交谈吸引了回来，“是山洞吗？还是树屋？”“你的想象力过于丰富了，”米卡笑了笑，说道，“我们要去破斧酒吧。”
+
+又走了几分钟，米卡突然停下了脚步，“到了。”千束向两边望去，却并没有什么酒吧，路左边是一家咖啡店，而路的右边是一家书店和唱片店。等等！千束突然感觉这两家店铺之间有什么，米卡带着她们向前面走去，在离得近了之后，他才发现，刚才她认为的漆黑墙壁居然是一扇门，可是这么小的门，两边又都是别的店铺，这酒吧得有多小呀。“请吧。”米卡带她们走进去后，破斧酒吧的全貌才向她们展开。与那狭小的门相比，酒吧里面的空间显得宽敞得多。明亮的灯光从天花板照到木制的桌子上，桌边坐着形形色色的人，带着兜帽、手里端着酒杯的女巫，穿着黑色长袍的年轻人，还有已经光头了的中年巫师，边吃着烤肉，边向旁边的人吹嘘着什么。
+
+米卡拉着她们向吧台走去，吧台后站着一个面色红润的女人，她的金色长发从耳朵后向肩膀流下，棕色的眼睛看着酒杯中的酒，似乎在想着什么。“晚上好，汉娜。”米卡向她打招呼道。汉娜这才抬起头来，看到了米卡，她面露歉意，说道：“抱歉，米卡，刚才没有看见你。”“没关系，”米卡说道，“纳威在吗。”汉娜指了指楼上，说道：“他刚用飞路粉回了霍格沃茨，前几天的那个石头似乎和他温室中的一些植物有些反应。听他说你这几天去日本了？”“是的，”米卡点了点头，“去看望了一位朋友，还收了两位学生。”“收了……两位学生？”汉娜疑惑道，看了看千束和泷奈的面孔，又转向米卡，说道：“你是怎么突然想到要收徒呢？”“当然是为了让我的技艺有所传承呀……”米卡答道，他的眼睛却似乎有些躲闪。不过这番说辞好像对汉娜比较有效，她思索着点了点头，说道：“像你这样别具一格的法术，确实需要传承下去。”“总之呢，”米卡将话题转向别处，说道：“我现在也需要回一趟学校，能否麻烦你暂时为我的学生安排个房间呢？”汉娜点了点头，说道：“当然可以，就交给我吧。”“多谢。”米卡说道，“向你介绍一下，这是锦木千束，这是井上泷奈。千束，泷奈，这是汉娜·艾博，破釜酒吧的老板。”“您好！”千束和泷奈向汉娜问好道。汉娜也露出了笑容，微笑道：“你们好呀。”“那，你们就先在这里住一晚，”米卡对千束和泷奈说道，“我明天就过来带你们去买需要的东西。”说罢，向汉娜点了点头，米卡便向刚才汉娜所指的房间过去。
+
+“我们走吧。”汉娜对千泷二人说道，说罢，领着她们向二楼走去。走到了二楼，这里又是与楼下完全不同的景色。上了楼梯，就是一条长长的走廊，走廊的右侧是一扇扇木门，上面用烫金的字体标注着门牌号。汉娜领着她们继续向前走去，走到了23号房间的门前。
+
+汉娜拿出魔杖在门锁上一敲，房门就打开了。她领着两人进了屋子，说道：“你们今晚就在这里休息吧。”只见屋内摆放着一个书桌，一张双人床，两张被子。橘黄色的灯光从屋顶的挂灯飘下来，让充满暖意的光芒填满了整间屋子。汉娜又说道：“这里被施了很多防护咒，从里面锁上门，外面的人是听不到里面的声音，也不可能闯进来的。你们就放心休息吧。”“谢谢您。”千束和泷奈赶忙向汉娜表达了感谢。“不用客气。”汉娜向她们微微点头，接着便走出了房间。
+
+看到了床，千束立刻泄了劲儿，直接奔向了床那柔软的怀抱。而泷奈则走向了门口，锁上了门，回过头，便看到了已经在收拾被子的千束。“泷奈，你想要哪个被子呢？”千束手中举着两张被子，分别是深红色和藏青色，但是碍于身高原因，这两张被子即使被对着过一次，现在也是快要掉到地上的高度。泷奈苦笑了一下，说：“千束先选吧。”“真的吗？”千束笑了，说，“那我就要红色的吧，和我的眼睛一样哦。”说罢，便将被子放在床上。就在她想把被子铺直的时候，被子却不听她的使唤，扯直了这边，那边却又皱起来了。“就将就睡吧。”千束似乎被被子消磨完了耐心，气的直接倒在床上。泷奈走了过来，对千束说：“请让我来吧。”千束从床上起来，笑着说道：“泷奈真的可以吗，这可是千束姐姐都办不到的事情哦。”但登她穿上鞋扭过头后，看到的却是两张已经被铺好的被子。千束惊讶得说不出话来。见状，泷奈终于露出了笑容。千束似乎想要扳回一局，便说道：“原来泷奈也会笑呀，很可爱呦！”泷奈却愣住了，脸上也似乎想泛出红晕，过了好几秒，才对千束说道：“谢谢。”千束却已经钻进了被窝，说道：“那就睡觉吧，泷奈。”“好的。”说着，泷奈也钻进了被窝。
+
+“要怎么才能关灯呢？”躺下之后，两人才想起了这个问题，可是她们并没有在这个屋子里发现开关之类的物品。突然，她们却听到有人说道：“要关灯吗？好的。”环顾四周，居然是头顶的挂灯发出的声音。随着光芒的消失，千束震惊地向泷奈说道：“这就是魔法吗……”“看起来是的。”泷奈回答道，“我们也会有机会学习这么厉害的魔法吧。”“肯定可以的，我们可要成为超强的巫师哦！”说罢，两人便闭上了眼睛，准备睡觉。
+
+……
+
+“睡不着呀！”千束又睁开了眼，“等我明年回去的时候，一定要给博正院长露一手！”“博正院长，是谁？”泷奈显然也并没有进入梦乡。“是我之前呆的孤儿院的院长呀，”千束答道，“突然来到这么远的地方读书，还是有一些想念哪里的……泷奈呢？泷奈也想念自己呆的孤儿院吗？”“完全不想！”泷奈的反应却非常强烈，完全超出了千束的预判。“你怎么……突然那么大声。”千束小声说道，似乎被泷奈给吓到了一样。泷奈的情绪却并没有平复下来，继续说道：“谁会想那种地方，他们就没把我们当过人，在他们眼里，我们只是用来骗政府补贴的工具。我们每天只有一顿饭，吃得还不如牲畜棚里的动物……”说着说着，泷奈流出了眼泪，声音也变得断断续续，“我们好几个同学，都因为营养不良生病了，可他们不管，只要我们能活着，他们就能赚到钱……他们才不会管我们呢……现在，能够脱离那种地方，谁会想回去呢……”
+
+走出孤儿院的门的那一刻，泷奈决定，将经历的痛苦遭遇与这个孤儿院一同忘记，就此开始新的生活。可是，当有人提起那个地方，泷奈自以为埋藏了的记忆又重新涌上了心头，她再也没能像白天一样那么冷静，情绪也无法再被压制。
+
+“抱歉。”哭了好一阵的泷奈终于控制住了自己，可这时，她却感受到了一个温暖的拥抱。“泷奈不哭了哦。”睁眼望去，泷奈看到了一双红色的眼睛在黑夜中闪闪发光，“已经离开那里了，就不要再想那些烦心事了。再说了，泷奈还有我和老师哦，今后，我们就是你的家人！”“家……人。”这曾经对于泷奈无比陌生的词汇，此刻却像却蕴含着无比强大的力量一样，直击泷奈的心头。“对哦，家人！”盯着眼前虽不闪烁，但不缺乏色彩的紫色眼睛，千束说道，“况且，我们还要一起学习呢。这叫什么来着……对了，这就是搭档！今后我们就是搭档啦，千束姐姐会一直帮你的呦！”千束微微眨眼，眼中的光也在闪烁。这闪烁的光，虽然微弱，但却照进了井上泷奈的内心，开始融化那积攒了几年之久的坚冰。就这样过去了一分钟，泷奈点了点头，说道：“嗯！”
+
+扭过头去，泷奈看到了从身后窗户照进来的月光。它是那么的温柔，即使没有阳光那么的明亮，却足够抚平人内心的创伤。
+
+“那，睡觉吧，搭档。”
+
+于是，披着皎洁的月光，锦木千束和井上泷奈进入了梦乡。
