--- a/source/_posts/彼岸花与会说话的金表-序章.md
+++ b/source/_posts/彼岸花与会说话的金表-序章.md
@@ -262,8 +262,8 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 走出孤儿院的门的那一刻，泷奈决定，将经历的痛苦遭遇与这个孤儿院一同忘记，就此开始新的生活。可是，当有人提起那个地方，泷奈自以为埋藏了的记忆又重新涌上了心头，她再也没能像白天一样那么冷静，情绪也无法再被压制。
 
-“抱歉。”哭了好一阵的泷奈终于控制住了自己，可这时，她却感受到了一个温暖的拥抱。“泷奈不哭了哦。”睁眼望去，泷奈看到了一双红色的眼睛在黑夜中闪闪发光，“已经离开那里了，就不要再想那些烦心事了。再说了，泷奈还有我和老师哦，今后，我们就是你的家人！”“家……人。”这曾经对于泷奈无比陌生的词汇，此刻却像却蕴含着无比强大的力量一样，直击泷奈的心头。“对哦，家人！”盯着眼前虽不闪烁，但不缺乏色彩的紫色眼睛，千束说道，“况且，我们还要一起学习呢。这叫什么来着……对了，这就是朋友！今后我们就是朋友啦，千束姐姐会一直帮你的呦！”窗沿旁透过星星的点点荧光，与千束的眼眸一同闪烁着。“泷奈泷奈！快看呐，那是星星的心跳！”涉奈向着窗外望去，眼睑旁的泪光也化成了星星，一闪，一闪，点缀着平静的月光。月光是那样温柔，即便没有阳光那么的明亮，也足够抚平人内心的创伤。
+“抱歉。”哭了好一阵的泷奈终于控制住了自己，可这时，她却感受到了一个温暖的拥抱。“泷奈不哭了哦。”睁眼望去，泷奈看到了一双红色的眼睛在黑夜中闪闪发光，“已经离开那里了，就不要再想那些烦心事了。再说了，泷奈还有我和老师哦，今后，我们就是你的家人！”“家……人。”这曾经对于泷奈无比陌生的词汇，此刻却像却蕴含着无比强大的力量一样，直击泷奈的心头。“对哦，家人！”盯着眼前虽不闪烁，但绝不缺乏色彩的紫色眼睛，千束说道，“况且，我们还要一起学习呢。这叫什么来着……对了，这就是好朋友哦！今后我们就是好朋友啦，千束姐姐会一直帮你的呦！”窗沿旁透过星星的点点荧光，与千束的眼眸一同闪烁着，于是泪光也化成了星星，一闪，一闪，点缀着平静的月光。月光是那样温柔，即便没有阳光那么的明亮，也足够抚平人内心的创伤。
 
 “那，睡觉吧，朋友。”
 
-于是，在一片银白笼置的静谧中，锦木千束和井上游奈进入了梦乡
+于是，在一片银白笼罩的静谧中，井上泷奈和锦木千束进入了梦乡。
