--- a/source/_posts/P5283-十二省联考-2019-异或粽子.md
+++ b/source/_posts/P5283-十二省联考-2019-异或粽子.md
@@ -7,7 +7,7 @@ description: P5283 [十二省联考 2019] 异或粽子 题解
 
 根据题目可知，答案是若干个区间异或和的和。若进行异或前缀和，记 $sum_i=\operatorname{xor}_{i=1}^{i} a_i$，且 $sum_0=0$ 则 $\operatorname{xor}_{i=l}^{r} a_i = sum_r \operatorname{xor}sum_{l-1}$。于是问题转化为找到 $k$ 个不重复的二元组 $(l,r)$，满足 $l\le r$，且 $\sum sum_r-sum_{l-1}$ 最大。
 
-首先，对于每个右端点 $r$ ，$l$ 的取值范围是 $[1,r-1]$，于是可以使用 **可持久化$\text{01Trie}$** 找出使得 $sum_r-sum_{l-1}$ 最大的 $l$ ，并记录下当前选的 $l$ 是什么，$l$ 的取值范围是什么，然后把这些东西扔到堆里面，每次弹出一个 $sum_r-sum_{l-1}$ 最大的，然后再在 $l$ 两侧取值范围内找两个最大的，再扔到堆里面，和 [超级钢琴](https://www.luogu.com.cn/problem/P2048) 差不多。
+首先，对于每个右端点 $r$ ，$l$ 的取值范围是 $[1,r-1]$，于是可以使用 **可持久化**$\text{01Trie}$ 找出使得 $sum_r-sum_{l-1}$ 最大的 $l$ ，并记录下当前选的 $l$ 是什么，$l$ 的取值范围是什么，然后把这些东西扔到堆里面，每次弹出一个 $sum_r-sum_{l-1}$ 最大的，然后再在 $l$ 两侧取值范围内找两个最大的，再扔到堆里面，和 [超级钢琴](https://www.luogu.com.cn/problem/P2048) 差不多。
 
 然后就做完了。
 
