--- a/source/_posts/彼岸花与会说话的金表-序章.md
+++ b/source/_posts/彼岸花与会说话的金表-序章.md
@@ -10,7 +10,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 温柔的金色光辉驱散了黑夜的最后一片黑暗；阳光透过盛开的樱花瓣，在大地上映出了点点光斑；于是风儿也温柔起来了，轻轻拂过那一片粉红，与花瓣一同漫步在温柔的春日清晨。
 
-“樱花开啦！”一个孩子高兴地喊着，跑出了孤儿院宿舍，她的米色头发随风飘动，像是与她共同欣赏着这美丽的景象。
+“樱花开啦！”一个孩子高兴地喊着，跑出了孤儿院宿舍，她美丽的脸庞上显着兴奋的神色，米色的头发随风飘动，像是与她共同欣赏着这美丽的景象。
 
 今天是锦木千束第八次在东京孤儿院欣赏樱花了。据孤儿院的护工所说，八年前的一个冬日的雨夜，院长博正正撑开伞回家。但就当他快走出孤儿院大门的时候，一阵强风吹得他睁不开眼。当风停后，好像有一块黑色地幕布被拉开了似的，博正突然看到一个孩子在大门口躺着，蜷缩着身体，随着飘落的雨水颤抖着，浑身上下只有一条湿透了的被子企图为她留下一丝温暖。院长便将这个孩子抱进了屋内。不知道这个孩子是什么时候被放在那里的，但是她蜷成一团的身体和紧锁的眉头可以看出时间不短。好在，在护工抱着她在火炉边暖和了一会之后，她睁开了双眼，露出了她那美丽的红瞳。这时，检查身份的护工也发现了压在棉被内的纸条：
 
@@ -202,13 +202,11 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 就当千束还想再问些什么的时候，米卡说道：“我们到了。”
 
-千束向道路边上看去，便看到了一所孤儿院的大门。她们向那里走去。保安向这个孤儿院的院长请示之后，便领着她们去往了院长的办公室。米卡又向这个孤儿院长说明了来意。这个孤儿院长却没有像博正一样不舍，几句话之后，就将那个女孩领了过来。
-
-跟着孤儿院长走进来的那个女孩眼睛中带着沉稳与严肃，黑色的长发随着微风飘舞着，就如同玫瑰的花刺，似乎在驱散着别人，警告他们与她保持距离。
+千束向道路边上看去，便看到了一所孤儿院的大门。她们向那里走去。保安向这个孤儿院的院长请示之后，便领着她们去往了院长的办公室。米卡又向这个孤儿院长说明了来意。这个孤儿院长却没有像博正一样不舍，几句话之后，就出门去叫那个女孩。过了约两、三分钟，女孩跟着孤儿院长走了进来，她的紫色眼睛好似一片深不见底的湖泊，带着沉稳与严肃，黑色的长发随着微风飘舞着，就如同玫瑰的花刺，似乎在驱散着别人，警告他们与她保持距离。
 
 孤儿院长对米卡说道：“签了这个协议，你就可以带她走了。”
 
-米卡似乎也被这个孤儿院长给震惊到了，并没有着急签字，而是转向了那个女孩，将入学通知书递给了她。
+米卡被这个孤儿院长给震惊到了，并没有着急签字，而是转向了那个女孩，将入学通知书递给了她。
 
 那个女孩看了看入学通知书，默默念道：“霍格沃茨？”读完之后，又抬头看向米卡。
 
@@ -228,12 +226,6 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 米卡扭过头，向吉松信二说道：“再见！”千束也拉着泷奈向吉松信二挥挥手，蹦着向吉松信二道别道：“再见，吉叔！”吉松信二挥了挥手，说道：“再见！”
 
-<<<<<<< HEAD
-一个小时后，飞机起飞了，载着三人向伦敦飞去。
-
-### 4
-
-=======
 一个小时后，飞机起飞了，迎着即将落下的夕阳，载着三人向伦敦飞去。
 
 ### 4
@@ -267,3 +259,6 @@ description: 平常的一天，不平常的故事与全新的开始。
 “那，睡觉吧，朋友。”
 
 于是，在一片银白笼罩的静谧中，井上泷奈和锦木千束进入了梦乡。
+
+### 5
+
