--- a/source/_posts/彼岸花与会说话的金表-序章.md
+++ b/source/_posts/彼岸花与会说话的金表-序章.md
@@ -96,7 +96,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 随着媒体的报道，事情也有了转机。当地最大的一家企业“果里科技”承诺要解决孩子们的读书问题，但是两三个月过去了，依然还剩下一小半孩子因为各种原因没能上学。他们中的大多数是因为过了入学年龄，需要办理复杂的插班手续而被耽搁。锦木千束是最后办理的那一个，由于其他学校的学生名额已经爆满，果里为他们找了东京最好的小学。
 
-那是一个晴朗的清晨，博正领着锦木千束前去办理入学手续。工作人员示意千束先坐在椅子上，让博正随他进入办公室。进入办公室后，工作人员递给博正一张清单，上面写了千束的择校费以及各种必需品的费用。博正开心的笑容刹那间消失了，面色铁青，又从铁青变成灰白。“这价格，五十万日元！您没在开玩笑吧？”“这已经是我们给果里的内部价了。要知道，有进入我们这里读书的机会，普通人连想都不敢想。”那时孤儿院的经费一个月才不过几万日元，博正低着头走出了办公室，看向满脸期待的千束，他煞白的脸又变得通红。眼尖的千束马上就发现了院长神色的反常：“没事的啦院长，我在咱那里也学得挺好的呀，老师们讲的课也很有意思的啦。”博正的眼神更加黯淡了。千束这样聪明的孩子，每天跟着那些学龄前的孩子一起听课，就像不遇伯乐的千里马，终会被冷酷的现实所埋没；但面对天价的入学金，博正却又无可奈何，只得拜托那些老师，每天单独给千束讲一些知识。
+那是一个晴朗的清晨，博正领着锦木千束前去办理入学手续。工作人员示意千束先坐在椅子上，让博正随他进入办公室。进入办公室后，工作人员递给博正一张清单，上面写了千束的择校费以及各种必需品的费用。博正开心的笑容刹那间消失了，面色铁青，又从铁青变成灰白。“这价格，五十万日元！您没在开玩笑吧？”“这已经是我们给果里的内部价了。要知道，有进入我们这里读书的机会，普通人连想都不敢想。”那时孤儿院的经费一个月才不过几万日元，五十万日元的价格，孤儿院根本负担不起。博正低着头走出了办公室，看向满脸期待的千束，他煞白的脸又变得通红。眼尖的千束马上就发现了院长神色的反常：“没事的啦院长，我在咱那里也学得挺好的呀，老师们讲的课也很有意思的啦。”博正的眼神更加黯淡了。千束这样聪明的孩子，每天跟着那些学龄前的孩子一起听课，就像不遇伯乐的千里马，终会被冷酷的现实所埋没；但面对天价的入学金，博正却又无可奈何，只得拜托那些老师，每天单独给千束讲一些知识。
 
 
 
@@ -110,7 +110,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “您请问。”
 
-“为什么您要跨越千里来日本招千束入学呢？”
+“为什么您要不远千里来日本招千束入学呢？”
 
 “当然是因为被千束的才华所吸引，”米卡笑道，“十天前，信二写信给我，说发现了两个极具才华的孩子，其中一个，就是千束。”
 
@@ -150,19 +150,19 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “现在吗？”千束说着，又看向了博正。
 
-博正说道：“要跟好米卡老师，不要乱跑哦，到了学校也要规律作息，好好学习。”
+博正说道：“要跟好米卡老师，不要乱跑哦，到了学校也要规律作息，好好学习，还有……”博正顿了顿，想要说些什么，却卡在嗓子眼里，一句也说不出，半晌才憋出一句话，声音比刚刚低沉了许多，“要照顾好自己，好吗？”
 
-“那我什么时候才能再见到院长呢。”千束说道。
+“没问题！”千束爽快地答道，但她也似乎看出了博正的心事，接着问道，“那我什么时候才能再见到院长呢？”
 
-“等到下一个暑假就能回来了。”米卡回答道。
+“等到下一个暑假你就能回来了。”米卡回答道。
 
 “嗯嗯，我一定会好好学习的。”千束挺了挺胸。
 
 四人一同走到了孤儿院门口。“院长再见！”千束跳着向博正道别。
 
-博正挥了挥手，“明年再见啦，千束。”
+博正挥了挥手，“明年再见啦，千束……多保重啊”
 
-“那再见了，博正院长。”米卡也向博正到了道别，便带着千束，与吉松一起离开了。博正却站在门口，看着三人离开的背影，迟迟没有转身。保安向博正说道：“这孩子也有了自己的归宿，不也挺好的吗。”“是吧，”博正回答道，“到了分别的时候，还是有些不舍呢。”说罢，博正转身走回了孤儿院。
+“那再见了，博正院长。”米卡也向博正到了道别，便带着千束，与吉松一起离开了。博正却站在门口，看着三人离开的背影，迟迟没有转身。保安向博正说道：“这孩子也有了自己的归宿，不也挺好的吗。”“是吧，”博正这样说道，却叹了口气，“多好啊……”他似乎还想说什么，看向保安，却欲言又止，只是点了点头，转身走回了孤儿院。
 
 
 
