--- a/source/_posts/彼岸花与会说话的金表-序章.md
+++ b/source/_posts/彼岸花与会说话的金表-序章.md
@@ -18,19 +18,13 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 于是，锦木千束在孤儿院的生活开始了。
 
-
-
 今天想必也是一个普通的一天吧。
-
-
 
 “千束，快来吃早饭啦！星期天也要按时作息哦！”护工在门口呼唤着千束。“来啦！”应答一声，千束恋恋不舍地跑向食堂。孤儿院的早饭绝对不算什么丰厚的大餐。“但在孤儿院里绝对算是一流的啦！”一个名叫依晨的孩子曾这样给千束说过。依晨是这群孩子中年龄最大的，一个月前，他因为原来的孤儿院解散，被送到了这里。“我原来待的那个地方吃的还不如这儿呢。那里还有一个特别凶的女孩子，惹恼了她你可就小心吧。但是她其实挺热心的，如果你真的有什么找她帮忙，她也是会帮的。”每次依晨讲起他在之前孤儿院的故事，其他孩子们都会让他多讲一些，毕竟对于这些从记事起就在孤儿院长大的孩子来说，这些故事可是闻所未闻的。于是依晨又讲起了那个女孩子，“有一次，我们一个同学调皮地乱转，不小心失足掉进了孤儿院的荷花池里，很快，他便被无情的湖水吞没了。我便迅速去叫老师，但就在我和老师回来的时候，那个掉进荷花池中的孩子却已经被救出来了。据旁边的孩子所说，那个女孩子径直跳了进去，就在其他孩子担心的时候，她抱着那个落水的孩子浮出了水面。唉，不知道她现在在哪里呢。”
 
 看着开心吃饭的孩子们，博正欣慰地露出了笑容。十年前，一场突如其来的地震摧毁了博正的一切，全家唯有他自己得以幸存。就在他万念俱灰的时候，他遇到了孤儿院。当时，孤儿院内只有两个孩子，并且濒临破产。博正无私地奉献出了自己的全部积蓄。现在，随着越来越多人的无私奉献，这个项目也越做越大。 “我曾经被灾害夺走了一切，但现在，这些孩子们就是我的全部。”在接受媒体采访的时候，博正如是说道。
 
 这时，博正接到了门卫的电话，“院长，有两个穿长袍的人要找你。”
-
-
 
 “博正院长，您好。”博正刚走到门口，其中一个棕瞳金发的人就向他打招呼道。
 
@@ -40,15 +34,11 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “那二位请来办公室坐坐吧，请。”博正坐了个请的手势。三人便一同前往博正办公室。
 
-
-
 路上，博正不禁思索到：究竟是什么样的学校能有精神这样深邃的老师，孤儿院中又有哪个孩子能让他亲自来拜访。
 
 食堂中，千束突然感觉有人在看自己，她抬头望去，只见两个穿着长袍的人跟在院长后面，其中一个人正在看着她。千束好像看见那个人向她点了点头。就当千束想仔细看看那个人的时候，他却扭过头去了。
 
 “好奇怪的人。”
-
-
 
 “二位请坐吧。”博正为那两个人拉出两把椅子，说道，“还不知如何称呼二位？”
 
@@ -88,8 +78,6 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 博正对所有孩子的情况了如指掌。对于锦木千束，他的记忆尤其深刻
 
-
-
 在博正将自己的全部奉献到孤儿院的一年后，孤儿院的创始人出了车祸，不幸离世。于是博正接手了孤儿院的所有工作。从未自己做过任何饭菜的博正只得一手看着教学的书本，一手为孩子们和自己做出不算美味的饭菜。也就在接受了媒体采访和社会援助后，孤儿院才有了经济基础为孩子们提供更好的环境。
 
 随着时间慢慢过去，孩子们慢慢长大，新的苦恼也来了。由于这里的大多数孩子没有身份证明，几乎所有的学校都不接收他们前去读书。越来越多的孩子过了上小学的年龄，却并没有去学校读书的机会。为了解决这个问题，博正招聘了几位老师专门负责孩子们的学习。但受限于经费有限，不可能招到很多老师，一门课能找一位老师已经很不错了，甚至有好几门课由一位老师教授的情况。
@@ -97,8 +85,6 @@ description: 平常的一天，不平常的故事与全新的开始。
 随着媒体的报道，事情也有了转机。当地最大的一家企业“果里科技”承诺要解决孩子们的读书问题，但是两三个月过去了，依然还剩下一小半孩子因为各种原因没能上学。他们中的大多数是因为过了入学年龄，需要办理复杂的插班手续而被耽搁。锦木千束是最后办理的那一个，由于其他学校的学生名额已经爆满，果里为他们找了东京最好的小学。
 
 那是一个晴朗的清晨，博正领着锦木千束前去办理入学手续。工作人员示意千束先坐在椅子上，让博正随他进入办公室。进入办公室后，工作人员递给博正一张清单，上面写了千束的择校费以及各种必需品的费用。博正开心的笑容刹那间消失了，面色铁青，又从铁青变成灰白。“这价格，五十万日元！您没在开玩笑吧？”“这已经是我们给果里的内部价了。要知道，有进入我们这里读书的机会，普通人连想都不敢想。”那时孤儿院的经费一个月才不过几万日元，五十万日元的价格，孤儿院根本负担不起。博正低着头走出了办公室，看向满脸期待的千束，他煞白的脸又变得通红。眼尖的千束马上就发现了院长神色的反常：“没事的啦院长，我在咱那里也学得挺好的呀，老师们讲的课也很有意思的啦。”博正的眼神更加黯淡了。千束这样聪明的孩子，每天跟着那些学龄前的孩子一起听课，就像不遇伯乐的千里马，终会被冷酷的现实所埋没；但面对天价的入学金，博正却又无可奈何，只得拜托那些老师，每天单独给千束讲一些知识。
-
-
 
 如今有学校主动想要招千束入学，可令博正太开心了，但来者却又是什么神秘的“魔法学校”。不过，千束的到来确实伴有着一丝蹊跷，难道那也是魔法吗？
 
@@ -122,8 +108,6 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “当然，请您放心。”米卡点了点头，说道，“那现在能请您把千束带过来吗，我需要亲手把录取通知书交给千束。”
 
-
-
 锦木千束刚吃完饭，就被护工叫出了食堂。出了食堂门，她就见到了等待她的博正院长，从院长欣喜的目光中，她感觉到了似乎院长有好消息要告诉她。
 
 “千束，有学校愿意录取你了！”
@@ -131,8 +115,6 @@ description: 平常的一天，不平常的故事与全新的开始。
 “真的吗！”千束高兴地跳了起来，“谢谢院长！”
 
 “其实，还是靠你自己的努力哦。”博正笑着给千束说道，“走吧，我们去见见学校的老师。”
-
-
 
 千束跟着院长走进办公室，只见面前的这个大人皮肤黝黑，一头飘逸的秀发搭在肩上，一副略显厚重的黑框眼镜搭在他宽大的鼻子上。“锦木千束，很高兴再次见到你，上次见你的时候你还在襁褓里呢！“千束对眼前这位陌生人感到疑惑时，“八年前就是您把我送到这里的吗？”陌生人点了点头，递给了她一封书信：
 
@@ -163,8 +145,6 @@ description: 平常的一天，不平常的故事与全新的开始。
 博正挥了挥手，“明年再见啦，千束……多保重啊”
 
 “那再见了，博正院长。”米卡也向博正到了道别，便带着千束，与吉松一起离开了。博正却站在门口，看着三人离开的背影，迟迟没有转身。保安向博正说道：“这孩子也有了自己的归宿，不也挺好的吗。”“是吧，”博正这样说道，却叹了口气，“多好啊……”他似乎还想说什么，看向保安，却欲言又止，只是点了点头，转身走回了孤儿院。
-
-
 
 走在东京的街道上，米卡向千束介绍道：“这是吉松信二，是我的好朋友，也是他向我推荐的你呢。”
 
@@ -238,7 +218,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 又走了几分钟，米卡突然停下了脚步，“到了。”千束向两边望去，却并没有什么酒吧，路左边是一家咖啡店，而路的右边是一家书店和唱片店。等等！千束突然感觉这两家店铺之间有什么，米卡带着她们向前面走去，在离得近了之后，他才发现，刚才她认为的漆黑墙壁居然是一扇门，可是这么小的门，两边又都是别的店铺，这酒吧得有多小呀。“请吧。”米卡带她们走进去后，破斧酒吧的全貌才向她们展开。与那狭小的门相比，酒吧里面的空间显得宽敞得多。明亮的灯光从天花板照到木制的桌子上，桌边坐着形形色色的人，带着兜帽、手里端着酒杯的女巫，穿着黑色长袍的年轻人，还有已经光头了的中年巫师，边吃着烤肉，边向旁边的人吹嘘着什么。
 
-米卡拉着她们向吧台走去，吧台后站着一个面色红润的女人，她的金色长发从耳朵后向肩膀流下，棕色的眼睛看着酒杯中的酒，似乎在想着什么。“晚上好，汉娜。”米卡向她打招呼道。汉娜这才抬起头来，看到了米卡，她面露歉意，说道：“抱歉，米卡，刚才没有看见你。”“没关系，”米卡说道，“纳威在吗。”汉娜指了指楼上，说道：“他刚用飞路粉回了霍格沃茨，前几天的那个石头似乎和他温室中的一些植物有些反应。听他说你这几天去日本了？”“是的，”米卡点了点头，“去看望了一位朋友，还收了两位学生。”“收了……两位学生？”汉娜疑惑道，看了看千束和泷奈的面孔，又转向米卡，说道：“你是怎么突然想到要收徒呢？”“当然是为了让我的技艺有所传承呀……”米卡答道，他的眼睛却似乎有些躲闪。不过这番说辞好像对汉娜比较有效，她思索着点了点头，说道：“像你这样别具一格的法术，确实需要传承下去。”“总之呢，”米卡将话题转向别处，说道：“我现在也需要回一趟学校，能否麻烦你暂时为我的学生安排个房间呢？”汉娜点了点头，说道：“当然可以，就交给我吧。”“多谢。”米卡说道，“向你介绍一下，这是锦木千束，这是井上泷奈。千束，泷奈，这是汉娜·艾博，破釜酒吧的老板。”“您好！”千束和泷奈向汉娜问好道。汉娜也露出了笑容，微笑道：“你们好呀。”“那，你们就先在这里住一晚，”米卡对千束和泷奈说道，“我明天就过来带你们去买需要的东西。”说罢，向汉娜点了点头，米卡便向刚才汉娜所指的房间过去。
+米卡拉着她们向吧台走去，吧台后站着一个面色红润的女人，她的金色长发从耳朵后向肩膀流下，棕色的眼睛看着酒杯中的酒，似乎在想着什么。“晚上好，汉娜。”米卡向她打招呼道。汉娜这才抬起头来，看到了米卡，她面露歉意，说道：“抱歉，米卡，刚才没有看见你。”“没关系，”米卡说道，“纳威在吗。”汉娜指了指楼上，说道：“他刚用飞路粉回了霍格沃茨，前几天的那个石头似乎和他温室中的一些植物有些反应。听他说你这几天去日本了？”“是的，”米卡点了点头，“去看望了一位朋友，还收了两位学生。”“收了……两位学生？”汉娜疑惑道，看了看千束和泷奈的面孔，又转向米卡，说道：“你是怎么突然想到要收徒呢？”“当然是为了让我的技艺有所传承呀……”米卡答道，他的眼睛却似乎有些躲闪。不过汉娜好像接受了这番说辞，没有再说什么。“总之呢，”米卡将话题转向别处，说道：“我现在也需要回一趟学校，能否麻烦你暂时为我的学生安排个房间呢？”汉娜点了点头，说道：“当然可以，就交给我吧。”“多谢。”米卡说道，“向你介绍一下，这是锦木千束，这是井上泷奈。千束，泷奈，这是汉娜·艾博，破釜酒吧的老板。”“您好！”千束和泷奈向汉娜问好道。汉娜也露出了笑容，微笑道：“你们好呀。”“那，你们就先在这里住一晚，”米卡对千束和泷奈说道，“我明天就过来带你们去买需要的东西。”说罢，向汉娜点了点头，米卡便向刚才汉娜所指的房间过去。
 
 “我们走吧。”汉娜对千泷二人说道，说罢，领着她们向二楼走去。走到了二楼，这里又是与楼下完全不同的景色。上了楼梯，就是一条长长的走廊，走廊的右侧是一扇扇木门，上面用烫金的字体标注着门牌号。汉娜领着她们继续向前走去，走到了23号房间的门前。
 
@@ -262,3 +242,16 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 ### 5
 
+金色的光芒开始在东方微微作亮，树叶也在温暖晨风的吹拂下微微作响。鸟儿醒了，扇动它的翅膀，开始在那一片片青草和绿叶中寻找着清晨的美食；花儿醒了，展开它的花瓣，开始散发新一天的芳香。随着路灯一盏盏熄灭，第一辆公交车发动了，第一趟地铁发车了。于是那东方的光芒也开始慢慢变亮——太阳升起来了，照耀着刚刚苏醒的城市，和平，安详，美丽。在一个不为人知的街角，阳光照进了一扇窗户，透过窗帘的缝隙，点亮了整间屋子。屋中的床上有两床被子，但是却只有一个人。
+
+感受到阳光的照射，泷奈微微睁开了眼睛。她想起来了昨晚的事情，自己又没有控制住情绪，但是和之前不同的是，有一个人安慰了她。想着，泷奈扭过了头，想看一眼千束，看见的却是自己在明晃晃的床板中反射的倒影。泷奈这才发现，昨晚睡前盖得被子已经不见了，而她正躺在瓷砖地板上。突然感觉到了身体的疼痛，泷奈急忙站了起来，只见床上的那个人张着胳膊，用伸直了的腿霸占了整张床。
+
+清晨的破釜酒吧大厅要清净得多，阳光透过大门上的小窗，照在桌椅上。与昨晚的热闹不同，大部分桌椅上都空无一人，只有一个桌子旁坐着两个少女，其中一个人不停地说着什么。
+
+“实在对不起啊，泷奈，我不是故意把你踹下去的……对不起哈……”千束不停地向泷奈道歉道。泷奈本来好像想说些什么，但是看千束一副愧疚的模样，脱口而出的便成了：“没事。”不料，这句话一出口，千束立马说道：“真的吗？泷奈原谅我了吗？”泷奈苦笑了一下，无奈地说道：“嗯，原谅你了。”“好耶！”千束兴奋地喊道。
+
+这时，汉娜踏着轻快的脚步从楼上走了下来，看到千泷二人在大厅待着，她说道：“你们起得这么早，昨晚睡得咋样呀？”千束欲言又止，犹豫了一下，好像想起了什么，又看向了泷奈。泷奈说道：“谢谢您的关心，我们睡得不错。”“不错就行，”汉娜答道，“你们米卡老师应该过一会就回来了。”话音刚落，米卡便从楼上走下来了。看到三人在大厅里，米卡也向千泷二人问道：“休息得怎么样啊？”泷奈再次了回答“不错”，米卡微笑着点了点头，向汉娜道了声谢，又说道：“那我先带她们去买开学需要的东西。”“好的。”汉娜应了一声，便走回了吧台后，开始准备迎接新一天的客人。
+
+米卡带着千泷二人从吧台旁的一个门走进了后院，这里只有几个垃圾桶。就在千束和泷奈疑惑的时候，米卡神秘地笑了笑，掏出魔杖，说道：“在对角巷，我们能够买到所有需要的物品。而要进去，需要敲一敲这一块砖头。”说着，米卡敲了一敲从垃圾桶往上数第三行，往右的第二个砖块，那块砖头突然想旁边转去，紧接着那一列所有的砖头都向两边转过去，逐渐形成了一条通道，同时也露出了墙后面的牌子，上面写道：“欢迎来到对角巷。”
+
+……
