--- a/source/_posts/彼岸花与会说话的金表-序章.md
+++ b/source/_posts/彼岸花与会说话的金表-序章.md
@@ -223,7 +223,7 @@ description: 平常的一天，不平常的故事与全新的开始。
 
 “我们走吧。”汉娜对千泷二人说道，说罢，领着她们向二楼走去。走到了二楼，这里又是与楼下完全不同的景色。上了楼梯，就是一条长长的走廊，走廊的右侧是一扇扇木门，上面用烫金的字体标注着门牌号。汉娜领着她们继续向前走去，走到了23号房间的门前。
 
-汉娜拿出魔杖在门锁上一敲，房门就打开了。她领着两人进了屋子，说道：“你们今晚就在这里休息吧。”只见屋内摆放着一个书桌，一张双人床，两张被子。橘黄色的灯光从屋顶的挂灯飘下来，让充满暖意的光芒填满了整间屋子。汉娜又说道：“这里被施了很多防护咒，从里面锁上门，外面的人是听不到里面的声音，也不可能闯进来的。你们就放心休息吧。”“谢谢您。”千束和泷奈赶忙向汉娜表达了感谢。“不用客气。”汉娜向她们微微点头，接着便走出了房间。
+汉娜拿出魔杖在门锁上一敲，房门就打开了。她领着两人进了屋子，说道：“你们今晚就在这里休息吧。”只见屋内摆放着一张双人床，橘黄色的灯光从屋顶的挂灯飘下来，让充满暖意的光芒填满了整间屋子。汉娜又说道：“这里被施了很多防护咒，从里面锁上门，外面的人是听不到里面的声音，也不可能闯进来的。你们就放心休息吧。”“谢谢您。”千束和泷奈赶忙向汉娜表达了感谢。“不用客气。”汉娜向她们微微点头，接着便走出了房间。
 
 看到了床，千束立刻泄了劲儿，直接奔向了床那柔软的怀抱。而泷奈则走向了门口，锁上了门，回过头，便看到了已经在收拾被子的千束。“泷奈，你想要哪个被子呢？”千束手中举着两张被子，分别是深红色和藏青色，但是碍于身高原因，这两张被子即使被对着过一次，现在也是快要掉到地上的高度。泷奈苦笑了一下，说：“千束先选吧。”“真的吗？”千束笑了，说，“那我就要红色的吧，和我的眼睛一样哦。”说罢，便将被子放在床上。就在她想把被子铺直的时候，被子却不听她的使唤，扯直了这边，那边却又皱起来了。“就将就睡吧。”千束似乎被被子消磨完了耐心，气的直接倒在床上。泷奈走了过来，对千束说：“请让我来吧。”千束从床上起来，笑着说道：“泷奈真的可以吗，这可是千束姐姐都办不到的事情哦。”但登她穿上鞋扭过头后，看到的却是两张已经被铺好的被子。千束惊讶得说不出话来。见状，泷奈终于露出了笑容。千束似乎想要扳回一局，便说道：“原来泷奈也会笑呀，很可爱呦！”泷奈却愣住了，脸上也似乎想泛出红晕，过了好几秒，才对千束说道：“谢谢。”千束却已经钻进了被窝，说道：“那就睡觉吧，泷奈。”“好的。”说着，泷奈也钻进了被窝。
 
