--- a/source/_posts/彼岸花与会说话的金表-序章.md
+++ b/source/_posts/彼岸花与会说话的金表-序章.md
@@ -1,8 +1,9 @@
 ---
 title: 彼岸花与会说话的金表-序章
-date: undefined
+date: 2023-9-7 22:00:00
 tags: 小故事
 description: 平常的一天，不平常的故事与全新的开始。
+top: 1
 ---
 
 # 序章
