--- a/source/_posts/彼岸花与会说话的金表-第一章.md
+++ b/source/_posts/彼岸花与会说话的金表-第一章.md
@@ -18,4 +18,4 @@ top: 1
 
 从那天起的一个月，米卡隔一天过来给千束和泷奈上一节课。经过一个月，千束和泷奈已经基本了解了各个魔法学科的区别，还有一些基础的知识。她们也学会了第一个咒语：$\mathscr{Lumos}$，能让魔杖尖端发光。在练习这个咒语的时候，泷奈尝试了两次就让魔杖尖端发出了光，千束却试了好多次才让魔杖上面蒙蒙亮。米卡却并没有责怪千束，只是笑了笑，说道：“没事的，多练习总能成功的。”
 
-随着开学日期的到来，两人的盼望之情也越来越强烈。终于在八月三十一号，米卡在上完课后告诉两人，明天就要去霍格沃茨报道了。他交给了两人两张车票和一张地图，说道：“我需要处理学校的一些事情，所以你们可能得自己去车站了。”又交代了几句之后，便匆匆离去了。第二天一早，两人便收拾好东西，准备前往国王十字车站。；
+随着开学日期的到来，两人的盼望之情也越来越强烈。终于在八月三十一号，米卡在上完课后告诉两人，明天就要去霍格沃茨报道了。他交给了两人两张车票和一张地图，说道：“我需要处理学校的一些事情，所以你们可能得自己去车站了。”又交代了几句之后，便匆匆离去了。第二天一早，两人便收拾好东西，准备前往国王十字车站。
