--- a/source/_posts/彼岸花与会说话的金表-第一章.md
+++ b/source/_posts/彼岸花与会说话的金表-第一章.md
@@ -30,4 +30,4 @@ $$
 
 刚放好自己的包，隔间中又走进来了一个女孩，他看起来十分年幼，似乎只有八、九岁的样子。那女孩说道：“别的隔间都满了，我可以坐这儿吗？”千束笑着回答道：“当然！”说着，把泷奈拉到自己这边，为那个女孩腾出了空。“谢谢。”那女孩道了声谢，开始往行李架上放自己的行李。见女孩放好了东西，千束急忙问道：“你好呀，我叫锦木千束，你叫什么名字呀？”女孩迟疑了一下，说道：“胡桃。”“哇，好名字呀，胡桃！”千束感叹道，听得泷奈想假装不认识这个家伙。千束指向泷奈，说到：“这是泷奈。”“你好，我是井上泷奈。”泷奈微微点头，向胡桃打招呼道。“你好。”胡桃也向泷奈微微点了点头。说罢，从行李中掏出了一个笔记本电脑，架在了桌子上。
 
-“诶？”千束疑惑道，笔记本电脑她在博正的办公室见过，是一种可以计算和搜索很多东西的机器，但绝对和魔法没有半点关系。“学魔法还需要用到电脑吗？”她向胡桃提出了自己的疑问。胡桃合上了笔记本，答道：“这是我老师研究出来的魔法。”“这也是魔法吗？”泷奈也被勾起了兴趣，问道。“是的，”胡桃答道，“这是老师研究了十余年的成果，融合了占卜学、魔咒学和变形学等多科的尖端成就。”“哇，”千束感叹道，“你老师是谁呀？”“Genshin。”“Genshin？”千束疑惑道，她似乎没听过这个名字，不过这也是应当的，毕竟一个月前她也不认识米卡和泷奈。胡桃却对千束的反应很震惊，说道：“你不知道 Genshin 教授吗？”千束茫然地摇了摇头，沉默了好久的泷奈却说道：“我知道。霍格沃茨校长，Genshin 教授。”
+“诶？”千束疑惑道，笔记本电脑她在博正的办公室见过，是一种可以计算和搜索很多东西的机器，但绝对和魔法没有半点关系。“学魔法还需要用到电脑吗？”她向胡桃提出了自己的疑问。胡桃合上了笔记本，答道：“这是我老师研究出来的魔法。”“这也是魔法吗？”泷奈也被勾起了兴趣，问道。“是的，”胡桃答道，“这是老师研究了十余年的成果，融合了占卜学、魔咒学和变形学等多科的尖端成就。”“哇，”千束感叹道，“你老师是谁呀？”“那维莱特。”“那维莱特？”千束疑惑道，她似乎没听过这个名字，不过这也是应当的，毕竟一个月前她也不认识米卡和泷奈。胡桃却对千束的反应很震惊，说道：“你不知道那维莱特教授吗？”千束茫然地摇了摇头，沉默了好久的泷奈却说道：“我知道。霍格沃茨校长，那维莱特教授。”
