--- a/source/_posts/【项目】代码混淆器.md
+++ b/source/_posts/【项目】代码混淆器.md
@@ -5,6 +5,9 @@ tags: 其他、
 description: 代码混淆器，让你放心小号逃罚时
 ---
 
+代码混淆器，让你放心小号逃罚时
+---------------
+
 在打 CF 时，你有没有过拿小号交代码过了再用大号交以逃避罚时的想法？
 
 又有没有过实践了上述想法导致 skip 一场比赛的经历？
@@ -19,15 +22,15 @@ description: 代码混淆器，让你放心小号逃罚时
 
 **【使用说明】**
 
-需要在 WindowsWindows 环境下运行。
-
-1. [点击此处](https://www.luogu.com.cn/problem/U336560)下载附件中的 code_maker.execode_maker.exe。
-2. 创建一个文件 code.incode.in，存储你需要混淆的代码。请将这个文件和上面的 .exe.exe 文件放在同一目录下。
-3. 运行 code_maker.execode_maker.exe，得到文件 code.cppcode.cpp，即混淆好的代码。
+测试环境为 Windows10, MinGW-GCC13。  
+请自行编译使用。
 
 **【已知 BUG】**
 
-目前对字符串的处理有问题，会将你输出的字符串替换为随机字符（
+目前对字符串的处理有问题，会将你输出的字符串替换为随机字符，预计 0.2 版本修复。
+
+**【版本号】**
+0.1
 
 **【源代码】**
 
