--- a/source/_posts/【项目】代码混淆器.md
+++ b/source/_posts/【项目】代码混淆器.md
@@ -18,7 +18,7 @@ description: 代码混淆器，让你放心小号逃罚时
 
 **【功能介绍】**
 
-代码混淆器可以将你的变量名全部改成随机字符串，同时添加一些随机注释，并保证代码还能正常运行。通过它，CF 将不能识别你的大小号代码是否雷同！
+代码混淆器可以将你的变量名全部改成常见或随机字符串，同时添加一些随机注释，并保证代码还能正常运行。通过它，CF 将不能识别你的大小号代码是否雷同！
 
 **【使用说明】**
 
@@ -27,10 +27,10 @@ description: 代码混淆器，让你放心小号逃罚时
 
 **【已知 BUG】**
 
-目前对字符串的处理有问题，会将你输出的字符串替换为随机字符，预计 0.2 版本修复。
+~~目前对字符串的处理有问题，会将你输出的字符串替换为随机字符，预计 0.2 版本修复。~~ （已修复）
 
 **【版本号】**
-0.1
+0.2
 
 **【源代码】**
 
@@ -106,7 +106,7 @@ string new_zhushi()
 void try_output_zhushi()
 {
     if (rd() % 20 == 0) {
-        fout << "\/\/" << new_zhushi() << '\n';
+        fout << "/\/" << new_zhushi() << '\n';
     }
 }
 void main()
@@ -153,6 +153,12 @@ void main()
                         while(i < len and is_val(s[i] , 1)) {
                             ans += s[i++];
                         }
+                    } else if (s[i] == '\"') {
+                        ans += s[i++];
+                        while(i < len and s[i] != '\"') {
+                            ans += s[i++];
+                        }
+                        if (i < len){ans += s[i++];}
                     } else {
                         ans += s[i++];
                     }
