--- a/source/_posts/彼岸花与会说话的金表-序章.md
+++ b/source/_posts/彼岸花与会说话的金表-序章.md
@@ -10,7 +10,7 @@ top: 1
 
 ### 1
 
-温柔的金色光辉驱散了黑夜的最后一片黑暗；阳光透过盛开的樱花瓣，在大地上映出了点点光斑；于是风儿也温柔起来了，轻轻拂过那一片粉红，与花瓣一同漫步在温柔的春日清晨。
+温柔的金色光辉驱散了夜的最后一片黑暗；阳光透过盛开的樱花瓣，在大地上映出了点点光斑；于是风儿也温柔起来了，轻轻拂过那一片粉红，与花瓣一同漫步在温柔的春日清晨。
 
 “樱花开啦！”一个孩子高兴地喊着，跑出了孤儿院宿舍，她美丽的脸庞上显着兴奋的神色，米色的头发随风飘动，像是与她共同欣赏着这美丽的景象。
 
@@ -20,7 +20,7 @@ top: 1
 
 于是，锦木千束在孤儿院的生活开始了。
 
-今天想必也是一个普通的一天吧。
+今天想必也是普通的一天吧。
 
 “千束，快来吃早饭啦！星期天也要按时作息哦！”护工在门口呼唤着千束。“来啦！”应答一声，千束恋恋不舍地跑向食堂。孤儿院的早饭绝对不算什么丰厚的大餐。“但在孤儿院里绝对算是一流的啦！”一个名叫依晨的孩子曾这样给千束说过。依晨是这群孩子中年龄最大的，一个月前，他因为原来的孤儿院解散，被送到了这里。“我原来待的那个地方吃的还不如这儿呢。那里还有一个特别凶的女孩子，惹恼了她你可就小心吧。但是她其实挺热心的，如果你真的有什么找她帮忙，她也是会帮的。”每次依晨讲起他在之前孤儿院的故事，其他孩子们都会让他多讲一些，毕竟对于这些从记事起就在孤儿院长大的孩子来说，这些故事可是闻所未闻的。于是依晨又讲起了那个女孩子，“有一次，我们一个同学调皮地乱转，不小心失足掉进了孤儿院的荷花池里，很快，他便被无情的湖水吞没了。我便迅速去叫老师，但就在我和老师回来的时候，那个掉进荷花池中的孩子却已经被救出来了。据旁边的孩子所说，那个女孩子径直跳了进去，就在其他孩子担心的时候，她抱着那个落水的孩子浮出了水面。唉，不知道她现在在哪里呢。”
 
